--- a/directbak.yaml
+++ b/directbak.yaml
@@ -962,6 +962,7 @@ payload:
   - '+.121mai.com'
   - '+.121mai0098.com'
   - '+.121mu.com'
+  - '+.121wty.com'
   - '+.121xia.com'
   - '+.1220609.cc'
   - '+.122cha.com'
@@ -2478,7 +2479,6 @@ payload:
   - '+.31myhome.com'
   - '+.31pump.com'
   - '+.31rent.com'
-  - '+.31rzp.com'
   - '+.31seal.com'
   - '+.31sjjx.com'
   - '+.31spjx.com'
@@ -5678,6 +5678,7 @@ payload:
   - '+.7yue.pro'
   - '+.7yueji.com'
   - '+.7yun.com'
+  - '+.7yz.com'
   - '+.7yzone.com'
   - '+.7zgame.com'
   - '+.7zhan.com'
@@ -6914,7 +6915,6 @@ payload:
   - '+.9qu5.com'
   - '+.9rmb.com'
   - '+.9see.com'
-  - '+.9simg.com'
   - '+.9skm.com'
   - '+.9sky.com'
   - '+.9sleep.org'
@@ -7000,7 +7000,6 @@ payload:
   - '+.aads-cng.net'
   - '+.aamachina.org'
   - '+.aap5.com'
-  - '+.aaqqw.com'
   - '+.aardio.com'
   - '+.aaronlam.xyz'
   - '+.aaspt.net'
@@ -7906,7 +7905,6 @@ payload:
   - '+.al8l.com'
   - '+.alabmed.com'
   - '+.alaboshuiyan.com'
-  - '+.alaccountant.com'
   - '+.alacun.com'
   - '+.aladdin-e.com'
   - '+.aladdinnet.com'
@@ -8535,6 +8533,7 @@ payload:
   - '+.aopayun.com'
   - '+.aoratec.com'
   - '+.aoscdn.com'
+  - '+.aoscom.net'
   - '+.aosens.com'
   - '+.aoseo.com'
   - '+.aoserp.com'
@@ -8803,7 +8802,6 @@ payload:
   - '+.areader.com'
   - '+.arebz.com'
   - '+.arefly.com'
-  - '+.arenacdn.com'
   - '+.ares.dl.playstation.net'
   - '+.arestech-sz.com'
   - '+.areweloongyet.com'
@@ -9425,7 +9423,6 @@ payload:
   - '+.baihong.com'
   - '+.baihui.com'
   - '+.baihui168.com'
-  - '+.baihuikangjt.com'
   - '+.baihuillq.com'
   - '+.baihuoke.com'
   - '+.baihuwang.com'
@@ -10744,6 +10741,7 @@ payload:
   - '+.bizhicool.com'
   - '+.bizhiquan.com'
   - '+.bizhizj.com'
+  - '+.bizhizu.com'
   - '+.bizhongchou.com'
   - '+.bizmoto.com'
   - '+.biznewscn.com'
@@ -10794,7 +10792,6 @@ payload:
   - '+.bjcdc.org'
   - '+.bjcec.com'
   - '+.bjceis.com'
-  - '+.bjcfzx.com'
   - '+.bjcgtrain.com'
   - '+.bjckkj.com'
   - '+.bjcls.net'
@@ -11889,6 +11886,7 @@ payload:
   - '+.c.team'
   - '+.c1042.com'
   - '+.c1ass.com'
+  - '+.c1channel.com'
   - '+.c1s.com'
   - '+.c2h4.org'
   - '+.c360dn.com'
@@ -13718,7 +13716,6 @@ payload:
   - '+.chinactv.com'
   - '+.chinaculture.org'
   - '+.chinacxjs.org'
-  - '+.chinacyzf.org'
   - '+.chinadafen.com'
   - '+.chinadailyglobal.com'
   - '+.chinadance.com'
@@ -14663,6 +14660,8 @@ payload:
   - '+.cjjd06.com'
   - '+.cjjd07.com'
   - '+.cjjd08.com'
+  - '+.cjjd15.com'
+  - '+.cjjd18.com'
   - '+.cjjhb.com'
   - '+.cjjjs.com'
   - '+.cjjnff.com'
@@ -15742,7 +15741,6 @@ payload:
   - '+.congyicn.com'
   - '+.congzao.com'
   - '+.congzhi.com'
-  - '+.connectingdeal.com'
   - '+.connector-systems.com'
   - '+.conoha.vip'
   - '+.conpak.com.hk'
@@ -16983,7 +16981,6 @@ payload:
   - '+.dameiweb.com'
   - '+.dameiyunduan.com'
   - '+.dameng.com'
-  - '+.damengxiang.me'
   - '+.damingweb.com'
   - '+.damndigital.com'
   - '+.damotea.com'
@@ -18366,7 +18363,6 @@ payload:
   - '+.dns200.net'
   - '+.dns2008.com'
   - '+.dns2023.com'
-  - '+.dns383.com'
   - '+.dns567.com'
   - '+.dns6132.com'
   - '+.dns6868.com'
@@ -18619,7 +18615,6 @@ payload:
   - '+.dora-control.cdnetworks.com'
   - '+.dora-family.com'
   - '+.dorapp.com'
-  - '+.doraunion.com'
   - '+.dormforce.net'
   - '+.dorrr.com'
   - '+.doseeing.com'
@@ -20269,6 +20264,7 @@ payload:
   - '+.epetpet.com'
   - '+.epexpo-asia.com'
   - '+.ephen.me'
+  - '+.epian1.com'
   - '+.epichust.com'
   - '+.epinautomation.com'
   - '+.epinduo.com'
@@ -20283,7 +20279,6 @@ payload:
   - '+.epoos.com'
   - '+.eprezi.com'
   - '+.eps114.com'
-  - '+.epschool.net'
   - '+.epsonconnect.com'
   - '+.epstsoft.com'
   - '+.epub360.com'
@@ -22601,7 +22596,6 @@ payload:
   - '+.ganqi.net'
   - '+.ganso.net'
   - '+.gansuairport.com'
-  - '+.gansunet.com'
   - '+.gansuyunshi.com'
   - '+.gantanhao.vip'
   - '+.ganxianw.com'
@@ -23920,6 +23914,7 @@ payload:
   - '+.gtm-a1b4.com'
   - '+.gtm-a1b6.com'
   - '+.gtm-a1b7.com'
+  - '+.gtm-a1b8.com'
   - '+.gtm-a2b2.com'
   - '+.gtm-a2b3.com'
   - '+.gtm-a2b4.com'
@@ -24030,7 +24025,6 @@ payload:
   - '+.guanliyun.com'
   - '+.guanmeikj.com'
   - '+.guanplus.com'
-  - '+.guanqifeier.com'
   - '+.guanrenjiaoyu.com'
   - '+.guanshangyu.cc'
   - '+.guanshi.net'
@@ -25806,7 +25800,6 @@ payload:
   - '+.helong.info'
   - '+.help-hope.org'
   - '+.helperaddress.com'
-  - '+.helplib.com'
   - '+.helpmeng.com'
   - '+.helpton.com'
   - '+.heluowenhua.net'
@@ -27353,7 +27346,6 @@ payload:
   - '+.huaweirom.com'
   - '+.huaweisafedns.com'
   - '+.huaweistatic.com'
-  - '+.huaweisymantec.com'
   - '+.huaweiuniversity.com'
   - '+.huaweizdl.com'
   - '+.huawenfanyi.com'
@@ -27515,7 +27507,6 @@ payload:
   - '+.huijitrans.com'
   - '+.huijiwiki.com'
   - '+.huijucn.com'
-  - '+.huikouhuo.com'
   - '+.huila88.com'
   - '+.huilan.com'
   - '+.huilanyujia.com'
@@ -27526,7 +27517,6 @@ payload:
   - '+.huilm.com'
   - '+.huilog.com'
   - '+.huilongsen.com'
-  - '+.huiluopang.com'
   - '+.huilvwang.com'
   - '+.huim.com'
   - '+.huimaiche.com'
@@ -27801,7 +27791,6 @@ payload:
   - '+.hutu.me'
   - '+.hutui9.com'
   - '+.hutuii.com'
-  - '+.hutuoweb.com'
   - '+.hutusi.com'
   - '+.huuhoo.com'
   - '+.huwaibbs.com'
@@ -28724,7 +28713,6 @@ payload:
   - '+.ifabao.com'
   - '+.ifabiao.com'
   - '+.ifaclub.com'
-  - '+.ifahao.com'
   - '+.ifanbei.com'
   - '+.ifangarden.com'
   - '+.ifangka.com'
@@ -28976,7 +28964,6 @@ payload:
   - '+.ijq.tv'
   - '+.ijsi.org'
   - '+.ijsp.net'
-  - '+.ijtomh.com'
   - '+.ijuanshi.com'
   - '+.ijuer.com'
   - '+.ijuhepay.com'
@@ -29151,7 +29138,6 @@ payload:
   - '+.imeishike.com'
   - '+.imeitools.com'
   - '+.imeitou.com'
-  - '+.imekaku.com'
   - '+.imeme.tv'
   - '+.imesong.com'
   - '+.imeyahair.com'
@@ -29331,7 +29317,6 @@ payload:
   - '+.inetnoc.com'
   - '+.inewhope.com'
   - '+.inewoffice.com'
-  - '+.inezha.com'
   - '+.infarts.net'
   - '+.infertilitybridge.com'
   - '+.infineon-autoeco.com'
@@ -29781,7 +29766,6 @@ payload:
   - '+.isoftstone.com'
   - '+.isoo.cc'
   - '+.isorange.com'
-  - '+.isoshu.com'
   - '+.isotoo.com'
   - '+.isoucai.com'
   - '+.isoyes.com'
@@ -30211,7 +30195,6 @@ payload:
   - '+.izhangchu.com'
   - '+.izhangheng.com'
   - '+.izhaohe.com'
-  - '+.izhaoo.com'
   - '+.izhaowo.com'
   - '+.izhenxin.com'
   - '+.izhihuicheng.net'
@@ -31193,7 +31176,6 @@ payload:
   - '+.jingyuelaw.com'
   - '+.jingyuxiaoban.com'
   - '+.jingyuyun.com'
-  - '+.jingzhe.me'
   - '+.jingzhengu.com'
   - '+.jingzhusz.com'
   - '+.jinhe-energy.com'
@@ -31203,7 +31185,6 @@ payload:
   - '+.jinhongchina.com'
   - '+.jinhuatv.com'
   - '+.jinhuazhe.com'
-  - '+.jinhuicorp.com'
   - '+.jinhusns.com'
   - '+.jinhutz.com'
   - '+.jinianbi.com'
@@ -31217,7 +31198,6 @@ payload:
   - '+.jinju8.com'
   - '+.jinjunmei.net'
   - '+.jinkan.org'
-  - '+.jinke3d.com'
   - '+.jinkejoy.com'
   - '+.jinkex.com'
   - '+.jinkezhexin.com'
@@ -31510,7 +31490,6 @@ payload:
   - '+.jjapk.com'
   - '+.jjb-static.com'
   - '+.jjbang.com'
-  - '+.jjbangbang.com'
   - '+.jjbank.net'
   - '+.jjbbs.com'
   - '+.jjbhn.com'
@@ -31873,7 +31852,6 @@ payload:
   - '+.jpghd.com'
   - '+.jphot.net'
   - '+.jpjc315.com'
-  - '+.jpjww.com'
   - '+.jpkcnet.com'
   - '+.jpkix.com'
   - '+.jpmsg.com'
@@ -32147,7 +32125,6 @@ payload:
   - '+.ju81.cc'
   - '+.juandou.com'
   - '+.juangua.com'
-  - '+.juanlaoda.com'
   - '+.juanpi.com'
   - '+.juanshangwang.com'
   - '+.juanta.com'
@@ -32690,6 +32667,7 @@ payload:
   - '+.kaihei.co'
   - '+.kaihu51.com'
   - '+.kaihuaeva.com'
+  - '+.kaihual.com'
   - '+.kaihuia.com'
   - '+.kaijia.com'
   - '+.kaikeba.com'
@@ -32738,7 +32716,6 @@ payload:
   - '+.kakadm.com'
   - '+.kakalili.com'
   - '+.kakamobi.com'
-  - '+.kakatv1.com'
   - '+.kakucloud.com'
   - '+.kalading.com'
   - '+.kalazan.com'
@@ -33144,7 +33121,6 @@ payload:
   - '+.kf911.com'
   - '+.kfadx.tech'
   - '+.kfang.xin'
-  - '+.kfc28.com'
   - '+.kfcdn.com'
   - '+.kfcms.com'
   - '+.kfd3sm2c.com'
@@ -33517,6 +33493,7 @@ payload:
   - '+.koolearn.com'
   - '+.koolproxy.com'
   - '+.koolyun.com'
+  - '+.koomao.com'
   - '+.koopass.com'
   - '+.koorun.com'
   - '+.kooshui.com'
@@ -34467,7 +34444,6 @@ payload:
   - '+.lawyershanghai.net'
   - '+.laxiao.com'
   - '+.layabox.com'
-  - '+.layqnjl.com'
   - '+.laysky.com'
   - '+.layui-inc.com'
   - '+.layui.com'
@@ -37504,7 +37480,6 @@ payload:
   - '+.meitaotaoo.com'
   - '+.meitegou.com'
   - '+.meitianhui.com'
-  - '+.meitong.org'
   - '+.meitu.com'
   - '+.meituan.com'
   - '+.meituan.net'
@@ -37583,7 +37558,6 @@ payload:
   - '+.mengmax.fun'
   - '+.mengniang.tv'
   - '+.mengniu99.com'
-  - '+.mengqianxun.net'
   - '+.mengqiuju.com'
   - '+.mengsang.com'
   - '+.mengso.com'
@@ -37918,7 +37892,6 @@ payload:
   - '+.mijisou.com'
   - '+.mijwed.com'
   - '+.mika123.com'
-  - '+.mika18.com'
   - '+.mikannovel.com'
   - '+.mike-x.com'
   - '+.mikechen.cc'
@@ -38273,7 +38246,6 @@ payload:
   - '+.mmimm.com'
   - '+.mmkkiivv.com'
   - '+.mmm.io'
-  - '+.mmmiao.com'
   - '+.mmmmmmm.com'
   - '+.mmmtech.com'
   - '+.mmods.site'
@@ -38973,6 +38945,7 @@ payload:
   - '+.my3w.com'
   - '+.my419.com'
   - '+.my4399.com'
+  - '+.my478.com'
   - '+.my51a.com'
   - '+.my5m.com'
   - '+.my5v.com'
@@ -39256,7 +39229,6 @@ payload:
   - '+.mzuimg.net'
   - '+.mzwu.com'
   - '+.mzxjzp.com'
-  - '+.mzxvib.com'
   - '+.mzyfz.com'
   - '+.mzyun.ren'
   - '+.mzyunyin.com'
@@ -39622,7 +39594,6 @@ payload:
   - '+.neusncp.com'
   - '+.neusoft.com'
   - '+.neutrontek.com'
-  - '+.neuwill.com'
   - '+.nev-battery.org'
   - '+.new-mobi.com'
   - '+.new-more.com'
@@ -40629,7 +40600,6 @@ payload:
   - '+.oklx.com'
   - '+.okmart.com'
   - '+.okmeeting.com'
-  - '+.okmjd.com'
   - '+.okmyapp.com'
   - '+.okng.com'
   - '+.okoer.com'
@@ -41639,6 +41609,7 @@ payload:
   - '+.peroperogames.com'
   - '+.personpsy.org'
   - '+.perspectivar.com'
+  - '+.pescms.com'
   - '+.pesiv.com'
   - '+.pesyun.com'
   - '+.pet86.com'
@@ -46299,6 +46270,7 @@ payload:
   - '+.shanyuankj.com'
   - '+.shanzhen.com'
   - '+.shanzhen.me'
+  - '+.shanzhildq.com'
   - '+.shanzhonglei.com'
   - '+.shaoanlv007.com'
   - '+.shaoerbc.org'
@@ -48121,7 +48093,6 @@ payload:
   - '+.sooyuu.com'
   - '+.soozhu.com'
   - '+.sopandas.com'
-  - '+.sopanxia.com'
   - '+.soperson.com'
   - '+.sophgo.com'
   - '+.sophiatiles.com'
@@ -49672,7 +49643,6 @@ payload:
   - '+.taiyulink.com'
   - '+.taizibao.com'
   - '+.tajdny.com'
-  - '+.takungae.com'
   - '+.takungpao.com'
   - '+.taladapp.com'
   - '+.talbrain.com'
@@ -53172,6 +53142,7 @@ payload:
   - '+.vitagou.hk'
   - '+.vitarn.com'
   - '+.vitechliu.com'
+  - '+.viterbi-tech.com'
   - '+.vitian.vip'
   - '+.vivantecorp.com'
   - '+.vivcms.com'
@@ -53362,7 +53333,6 @@ payload:
   - '+.vsooncloud.com'
   - '+.vsoontech.com'
   - '+.vspk.com'
-  - '+.vspk.net'
   - '+.vsppt.com'
   - '+.vsread.com'
   - '+.vstab.com'
@@ -53741,7 +53711,6 @@ payload:
   - '+.wangyuwang.com'
   - '+.wangzhan123.net'
   - '+.wangzhan360.com'
-  - '+.wangzhan6.com'
   - '+.wangzhanbao.cc'
   - '+.wangzhanbianji.com'
   - '+.wangzhanchi.com'
@@ -53846,6 +53815,7 @@ payload:
   - '+.wanzhugs.com'
   - '+.wanzi.cc'
   - '+.wanzi.com'
+  - '+.wanzia.com'
   - '+.wanzjhb.com'
   - '+.wanzuile.com'
   - '+.waoo.cc'
@@ -54589,7 +54559,6 @@ payload:
   - '+.wfjtjy.com'
   - '+.wfkouyaji.com'
   - '+.wflgjx.com'
-  - '+.wfsdf.com'
   - '+.wfsysc.com'
   - '+.wfuyu.com'
   - '+.wfxyny.com'
@@ -54893,7 +54862,6 @@ payload:
   - '+.whysodiao.com'
   - '+.whysx.com'
   - '+.whyungu.com'
-  - '+.whyxysp.com'
   - '+.whyyy.com'
   - '+.whzb.com'
   - '+.whzblawson.com'
@@ -57187,7 +57155,6 @@ payload:
   - '+.xiji.com'
   - '+.xijiangtv.com'
   - '+.xijing01.com'
-  - '+.xiju.cc'
   - '+.xijucn.com'
   - '+.xikii.com'
   - '+.xiladaili.com'
@@ -57499,7 +57466,6 @@ payload:
   - '+.xinxuezx.com'
   - '+.xinxunwang.com'
   - '+.xinxunwei.com'
-  - '+.xinyali.net'
   - '+.xinyan.com'
   - '+.xinyaoyao.com'
   - '+.xinyayk.com'
@@ -57543,7 +57509,6 @@ payload:
   - '+.xiqihe.com'
   - '+.xiqingji.com'
   - '+.xiqinrc.com'
-  - '+.xiqqq.com'
   - '+.xirang.com'
   - '+.xirenxuan.com'
   - '+.xisaiwang.com'
@@ -57747,6 +57712,7 @@ payload:
   - '+.xk8090.com'
   - '+.xk89.com'
   - '+.xk9l.com'
+  - '+.xkaxka.com'
   - '+.xkb1.com'
   - '+.xkbsw.com'
   - '+.xkcd.in'
@@ -57932,7 +57898,6 @@ payload:
   - '+.xn--io0a7i'
   - '+.xn--it-1r3f.com'
   - '+.xn--jvrr72kgma408a.com'
-  - '+.xn--n4yr07d.xn--6qq986b3xl'
   - '+.xn--ntsp37j.net'
   - '+.xn--nyqx2gbsm8u0b.com'
   - '+.xn--nyw032beqlm2f.com'
@@ -59583,7 +59548,6 @@ payload:
   - '+.yingtaosiyue.com'
   - '+.yingtaoyun.com'
   - '+.yinguobing.com'
-  - '+.yingupuhui.com'
   - '+.yingwangtech.net'
   - '+.yingwenming.com'
   - '+.yingworks.com'
@@ -61432,6 +61396,7 @@ payload:
   - '+.yyfax.com'
   - '+.yyfdcw.com'
   - '+.yyfsb.com'
+  - '+.yyfunning.com'
   - '+.yyg.com'
   - '+.yygjuu.club'
   - '+.yygold.com'
@@ -61796,7 +61761,6 @@ payload:
   - '+.zdomo.com'
   - '+.zdoz.net'
   - '+.zdpeanut.com'
-  - '+.zdpvt.com'
   - '+.zdrcrx.com'
   - '+.zdrcw.com'
   - '+.zdsee.com'
@@ -63046,7 +63010,6 @@ payload:
   - '+.zhyyz.com'
   - '+.zhzjw.net'
   - '+.zhzyw.com'
-  - '+.zhzyw.org'
   - '+.zhzzx.com'
   - '+.zi.com'
   - '+.zi5.cc'
