--- a/directbak.yaml
+++ b/directbak.yaml
@@ -19556,7 +19556,6 @@ payload:
   - '+.easytrip.com'
   - '+.easyzw.com'
   - '+.eateapp.com'
-  - '+.eaten.fun'
   - '+.eaydu.com'
   - '+.eayou.com'
   - '+.eayuan.com'
@@ -24641,6 +24640,7 @@ payload:
   - '+.h6app.com'
   - '+.h7ec.com'
   - '+.h8jx.com'
+  - '+.h9hash.com'
   - '+.ha97.com'
   - '+.haawking.com'
   - '+.habadog.com'
@@ -36615,7 +36615,6 @@ payload:
   - '+.lzhpo.com'
   - '+.lzhygame.com'
   - '+.lzjdbjc.com'
-  - '+.lzjjdd.net'
   - '+.lzjoy.com'
   - '+.lzlj.com'
   - '+.lzmoyin.com'
@@ -44032,7 +44031,6 @@ payload:
   - '+.qutuiwa.com'
   - '+.quumii.com'
   - '+.quvisa.com'
-  - '+.quw1234.icu'
   - '+.quwaifu.com'
   - '+.quwan.com'
   - '+.quwan.fun'
@@ -46698,6 +46696,7 @@ payload:
   - '+.shiwan.com'
   - '+.shiwangyun.com'
   - '+.shiweisemi.com'
+  - '+.shiwusmd.com'
   - '+.shixian.com'
   - '+.shixiaojin.com'
   - '+.shixibiaozhi.com'
@@ -48270,6 +48269,7 @@ payload:
   - '+.speednt.com'
   - '+.speedpdf.com'
   - '+.speedsz.net'
+  - '+.speedtest.im'
   - '+.speedws.info'
   - '+.speedws.org'
   - '+.speiyou.com'
@@ -63735,7 +63735,6 @@ payload:
   - '+.ztch.ltd'
   - '+.ztcia.com'
   - '+.ztcnwy.com'
-  - '+.ztdad.com'
   - '+.zte.net'
   - '+.ztedevice.com'
   - '+.ztedevices.com'
