--- a/directbak.yaml
+++ b/directbak.yaml
@@ -165,7 +165,6 @@ payload:
   - '+.024heyi.com'
   - '+.024hh.com'
   - '+.024huada.com'
-  - '+.024zol.com'
   - '+.024zxw.com'
   - '+.02516.com'
   - '+.025ct.com'
@@ -2234,6 +2233,7 @@ payload:
   - '+.26ef.com'
   - '+.26host.com'
   - '+.26joy.com'
+  - '+.26ks.org'
   - '+.26lady.com'
   - '+.26tc.com'
   - '+.26youxi.com'
@@ -3175,7 +3175,6 @@ payload:
   - '+.3wht.com'
   - '+.3wka.com'
   - '+.3wmm.com'
-  - '+.3wsw.com'
   - '+.3wzhaopin.com'
   - '+.3x88.net'
   - '+.3xgd.com'
@@ -5782,6 +5781,7 @@ payload:
   - '+.81comdns.com'
   - '+.81it.com'
   - '+.81js.net'
+  - '+.81jubayi.com'
   - '+.81kx.com'
   - '+.81pan.com'
   - '+.81tech.com'
@@ -6396,7 +6396,6 @@ payload:
   - '+.921716.com'
   - '+.9217web.com'
   - '+.921lu.com'
-  - '+.922000.com'
   - '+.92220668.com'
   - '+.92220701.com'
   - '+.922835.com'
@@ -6787,7 +6786,6 @@ payload:
   - '+.99haoling.com'
   - '+.99hdf.com'
   - '+.99hkjf.com'
-  - '+.99huizhou.com'
   - '+.99huodong.xyz'
   - '+.99ielts.com'
   - '+.99inn.cc'
@@ -6912,7 +6910,6 @@ payload:
   - '+.9orange.com'
   - '+.9pt.net'
   - '+.9qu.com'
-  - '+.9qu5.com'
   - '+.9rmb.com'
   - '+.9see.com'
   - '+.9skm.com'
@@ -6968,6 +6965,7 @@ payload:
   - '+.a1166.com'
   - '+.a135.net'
   - '+.a166.com'
+  - '+.a1736.com'
   - '+.a2048.com'
   - '+.a21fs.com'
   - '+.a21yishion.com'
@@ -7027,7 +7025,6 @@ payload:
   - '+.abc360.com'
   - '+.abc369.net'
   - '+.abcache.com'
-  - '+.abcbxw.com'
   - '+.abcd5.com'
   - '+.abcdao.com'
   - '+.abcdocker.com'
@@ -7805,6 +7802,7 @@ payload:
   - '+.aixcoder.com'
   - '+.aixiaoduo.com'
   - '+.aixiashu.com'
+  - '+.aixiashu.net'
   - '+.aixiatxt.com'
   - '+.aixiawa.com'
   - '+.aixiawx.com'
@@ -8521,6 +8519,7 @@ payload:
   - '+.aolai.com'
   - '+.aolaigo.com'
   - '+.aoliday.com'
+  - '+.aoliongame.com'
   - '+.aolylcd.com'
   - '+.aomeng.net'
   - '+.aomygod.com'
@@ -10009,7 +10008,6 @@ payload:
   - '+.bdydns.net'
   - '+.bdys.me'
   - '+.bdysite.com'
-  - '+.bdyxzx.com'
   - '+.be-xx.com'
   - '+.be90.com'
   - '+.beadwallet.com'
@@ -11429,6 +11427,7 @@ payload:
   - '+.bqg8.cc'
   - '+.bqg8.la'
   - '+.bqg99.cc'
+  - '+.bqgnovels.com'
   - '+.bqgyy.com'
   - '+.bqimg.com'
   - '+.bqpoint.com'
@@ -13113,6 +13112,7 @@ payload:
   - '+.changjiangtimes.com'
   - '+.changjuyi.com'
   - '+.changker.com'
+  - '+.changlipeixun.com'
   - '+.changliuliang.com'
   - '+.changning.net'
   - '+.changpingquzhongxiyijieheyiyuan.com'
@@ -14437,7 +14437,6 @@ payload:
   - '+.chunyu.mobi'
   - '+.chunyuqiufeng.com'
   - '+.chunyuyisheng.com'
-  - '+.chuqimen.com'
   - '+.chuquan.me'
   - '+.chureng.com'
   - '+.churenjixie.com'
@@ -18069,6 +18068,7 @@ payload:
   - '+.dingtalkapps.com'
   - '+.dingtangzqx.com'
   - '+.dingteam.com'
+  - '+.dingweilishi.com'
   - '+.dingxiang-inc.com'
   - '+.dingxinhui.com'
   - '+.dingxinwen.com'
@@ -20216,6 +20216,7 @@ payload:
   - '+.enrz.com'
   - '+.enshide.com'
   - '+.enshijob.com'
+  - '+.ensotemple.com'
   - '+.enstylement.com'
   - '+.ent120.com'
   - '+.enterdesk.com'
@@ -21729,7 +21730,6 @@ payload:
   - '+.florentiavillage.com'
   - '+.flower188.com'
   - '+.flower33.com'
-  - '+.flowerku.fun'
   - '+.flowerpassword.com'
   - '+.flowever.net'
   - '+.flowportal.com'
@@ -22062,7 +22062,6 @@ payload:
   - '+.fsbankonline.com'
   - '+.fsc555.com'
   - '+.fscinda.com'
-  - '+.fscl666.com'
   - '+.fsclzs.com'
   - '+.fscm.tech'
   - '+.fscmjt.com'
@@ -22855,6 +22854,7 @@ payload:
   - '+.gdsxgd.com'
   - '+.gdsytech.com'
   - '+.gdszjgdj.org'
+  - '+.gdszkw.com'
   - '+.gdtai.com'
   - '+.gdtaihao.com'
   - '+.gdtex.com'
@@ -23323,7 +23323,6 @@ payload:
   - '+.globaldangdang.hk'
   - '+.globaletrust.com'
   - '+.globalhardwares.com'
-  - '+.globalhomed.com'
   - '+.globalimporter.net'
   - '+.globalizex.com'
   - '+.globalmil.com'
@@ -24451,7 +24450,6 @@ payload:
   - '+.gzhxpw.com'
   - '+.gzhzcj.com'
   - '+.gzidc.com'
-  - '+.gzif.net'
   - '+.gzittc.net'
   - '+.gzj568.com'
   - '+.gzjingsha.com'
@@ -24483,7 +24481,6 @@ payload:
   - '+.gzncstudios.com'
   - '+.gznemo.com'
   - '+.gznet.com'
-  - '+.gznewtouch.net'
   - '+.gzngn.com'
   - '+.gznxbank.com'
   - '+.gzpeite.com'
@@ -26321,7 +26318,6 @@ payload:
   - '+.hkproperty.com'
   - '+.hkqbh.com'
   - '+.hkscxh.com'
-  - '+.hkskyloyd.com'
   - '+.hkstv.tv'
   - '+.hkszetsair.com'
   - '+.hkt4.com'
@@ -27586,6 +27582,7 @@ payload:
   - '+.huiyinxun.com'
   - '+.huiyizhuo.com'
   - '+.huiyou.com'
+  - '+.huiyu.vc'
   - '+.huiyuandao.com'
   - '+.huiyuanyy.com'
   - '+.huiyumedia.com'
@@ -27952,7 +27949,6 @@ payload:
   - '+.hydzfp.com'
   - '+.hyedu.com'
   - '+.hyext.com'
-  - '+.hyfc168.com'
   - '+.hyfutures.com'
   - '+.hyggfx.com'
   - '+.hygl.org'
@@ -28413,7 +28409,6 @@ payload:
   - '+.ichacha.com'
   - '+.ichacha.net'
   - '+.ichang8.com'
-  - '+.ichangbaishan.com'
   - '+.ichangtou.com'
   - '+.ichanyu.com'
   - '+.ichaoshangyue.com'
@@ -31177,6 +31172,7 @@ payload:
   - '+.jingyuxiaoban.com'
   - '+.jingyuyun.com'
   - '+.jingzhengu.com'
+  - '+.jingzhunyunting.com'
   - '+.jingzhusz.com'
   - '+.jinhe-energy.com'
   - '+.jinhengjgj.com'
@@ -31564,7 +31560,6 @@ payload:
   - '+.jjyx.com'
   - '+.jjzdm.com'
   - '+.jjzfgjj.com'
-  - '+.jjzl800.com'
   - '+.jk-px.com'
   - '+.jk126.com'
   - '+.jk130.com'
@@ -34064,6 +34059,7 @@ payload:
   - '+.kzeww.com'
   - '+.kzore.com'
   - '+.kzqs.com'
+  - '+.kzread.com'
   - '+.kzt.cc'
   - '+.kztpms.com'
   - '+.kzwr.com'
@@ -35978,7 +35974,6 @@ payload:
   - '+.lookbravo.com'
   - '+.lookchem.com'
   - '+.lookcss.com'
-  - '+.lookdiv.com'
   - '+.lookgame.com'
   - '+.looking-car.com'
   - '+.lookr.cc'
@@ -36304,10 +36299,8 @@ payload:
   - '+.luochen.com'
   - '+.luochenyl.com'
   - '+.luocs.cc'
-  - '+.luodaoyi.com'
   - '+.luodian.com'
   - '+.luodw.cc'
-  - '+.luody.info'
   - '+.luofan.net'
   - '+.luogu.org'
   - '+.luohanyu.cc'
@@ -36786,7 +36779,6 @@ payload:
   - '+.maihanji.com'
   - '+.maihaoche.com'
   - '+.maihehd.com'
-  - '+.maihenghb.com'
   - '+.maijia.com'
   - '+.maijiaba.com'
   - '+.maijiakan.com'
@@ -37011,7 +37003,6 @@ payload:
   - '+.maodou.com'
   - '+.maodouapp.com'
   - '+.maoercdn.com'
-  - '+.maoerduo2018.com'
   - '+.maoflag.net'
   - '+.maogepingbeauty.com'
   - '+.maogx.win'
@@ -37225,7 +37216,6 @@ payload:
   - '+.mcchcdn.com'
   - '+.mcchina.com'
   - '+.mcchou.com'
-  - '+.mcd.blue'
   - '+.mcd.cc'
   - '+.mcdchina.net'
   - '+.mcdsusan.com'
@@ -37576,7 +37566,6 @@ payload:
   - '+.mengzone.com'
   - '+.menhood.wang'
   - '+.menksoft.com'
-  - '+.menov.net'
   - '+.menpiao.com'
   - '+.menqiu.com'
   - '+.mentrends.com'
@@ -38641,7 +38630,6 @@ payload:
   - '+.mp4er.cc'
   - '+.mp4ju.com'
   - '+.mp4kan.com'
-  - '+.mp5w.net'
   - '+.mpaascloud.com'
   - '+.mpacc.net'
   - '+.mpaidata.com'
@@ -40618,7 +40606,6 @@ payload:
   - '+.okwuyou.com'
   - '+.okxr.com'
   - '+.okz.com'
-  - '+.okz.ltd'
   - '+.ol-cdn.com'
   - '+.ol-img.com'
   - '+.olabo.net'
@@ -42789,6 +42776,7 @@ payload:
   - '+.qfang.com'
   - '+.qfangimg.com'
   - '+.qfcm.vip'
+  - '+.qfdy2022.xyz'
   - '+.qfedu.com'
   - '+.qfeiche.com'
   - '+.qfgolang.com'
@@ -45473,6 +45461,7 @@ payload:
   - '+.scdzmw.com'
   - '+.scedu.net'
   - '+.sceeo.com'
+  - '+.scenery.hk'
   - '+.scflcp.com'
   - '+.scfzbs.com'
   - '+.scgc.net'
@@ -45930,7 +45919,6 @@ payload:
   - '+.seofangfa.com'
   - '+.seohet.com'
   - '+.seoipo.com'
-  - '+.seoniao.com'
   - '+.seopath.net'
   - '+.seopeixun5.com'
   - '+.seopre.com'
@@ -48277,7 +48265,6 @@ payload:
   - '+.spforum.net'
   - '+.spgnux.com'
   - '+.spibj.com'
-  - '+.spiderprobe.com'
   - '+.spiiker.com'
   - '+.spin-view.com'
   - '+.spirit-doll.net'
@@ -48422,6 +48409,7 @@ payload:
   - '+.sspaas.com'
   - '+.sspai.com'
   - '+.sspai.me'
+  - '+.sspeeddns.com'
   - '+.sspezz.com'
   - '+.ssports.com'
   - '+.ssports.net'
@@ -49394,6 +49382,7 @@ payload:
   - '+.szlbfs.com'
   - '+.szlc9.com'
   - '+.szlcsc.com'
+  - '+.szlddb.com'
   - '+.szledia.org'
   - '+.szleezen.com'
   - '+.szlhtram.com'
@@ -50763,6 +50752,7 @@ payload:
   - '+.tjmama.com'
   - '+.tjmhc.com'
   - '+.tjmuch.com'
+  - '+.tjmysdq.com'
   - '+.tjorthop.org'
   - '+.tjpa-china.org'
   - '+.tjpma.org'
@@ -50828,6 +50818,7 @@ payload:
   - '+.tlightsky.com'
   - '+.tlinx.com'
   - '+.tlivecdn.com'
+  - '+.tlivemcdn.com'
   - '+.tlivepush.com'
   - '+.tlivesource.com'
   - '+.tljcw.com'
@@ -50909,7 +50900,6 @@ payload:
   - '+.todayios.com'
   - '+.todayisp.net'
   - '+.todaynic.com'
-  - '+.todebug.com'
   - '+.todesk.com'
   - '+.todoen.com'
   - '+.todokeji.com'
@@ -52271,7 +52261,6 @@ payload:
   - '+.ujing.online'
   - '+.ujipin.com'
   - '+.ujiuye.com'
-  - '+.ujwang.com'
   - '+.uk-edu.com'
   - '+.uk-odc.samsungapps.com'
   - '+.uk86.com'
@@ -53160,6 +53149,7 @@ payload:
   - '+.vjiazu.com'
   - '+.vjie.com'
   - '+.vjshi.com'
+  - '+.vjty372.com'
   - '+.vjudge.net'
   - '+.vk6.me'
   - '+.vk8.co'
@@ -56137,6 +56127,7 @@ payload:
   - '+.x1340.com'
   - '+.x158.tv'
   - '+.x1997.net'
+  - '+.x23119.com'
   - '+.x23qb.com'
   - '+.x23us.me'
   - '+.x23us.us'
@@ -56239,7 +56230,6 @@ payload:
   - '+.xayestar.com'
   - '+.xayrc.com'
   - '+.xazcit.com'
-  - '+.xaztdz.com'
   - '+.xazwy.com'
   - '+.xazzg.com'
   - '+.xazzp.com'
@@ -56475,7 +56465,6 @@ payload:
   - '+.xfisp.com'
   - '+.xfjw.net'
   - '+.xfliusheng.com'
-  - '+.xfn.xyz'
   - '+.xfnano.com'
   - '+.xfocus.net'
   - '+.xfocus.org'
@@ -57479,7 +57468,6 @@ payload:
   - '+.xinyongbuy.com'
   - '+.xinyou.com'
   - '+.xinyour.com'
-  - '+.xinyouw.org'
   - '+.xinyu19.com'
   - '+.xinyuechao.com'
   - '+.xinyuefei.com'
@@ -57495,6 +57483,7 @@ payload:
   - '+.xinzhi.space'
   - '+.xinzzfsdfdslk333.com'
   - '+.xinzzrowieir444.com'
+  - '+.xioagege587skjdo.com'
   - '+.xionganxinxi.com'
   - '+.xionganzhuce.com'
   - '+.xiongdayq.com'
@@ -57598,7 +57587,6 @@ payload:
   - '+.xiwnn.com'
   - '+.xiwuji.com'
   - '+.xixi520.com'
-  - '+.xixiaoling.com'
   - '+.xixiaoyou.com'
   - '+.xixiarc.com'
   - '+.xixibobo.com'
@@ -60574,6 +60562,7 @@ payload:
   - '+.yrw.cc'
   - '+.yrw.com'
   - '+.yrwy.com'
+  - '+.yrxsw.com'
   - '+.yryz.com'
   - '+.yrzjw.com'
   - '+.ys.cc'
@@ -61082,7 +61071,6 @@ payload:
   - '+.yunqishi8.com'
   - '+.yunqiyqh.com'
   - '+.yunque360.com'
-  - '+.yunque365.com'
   - '+.yunrg.com'
   - '+.yunrongu.com'
   - '+.yunruift.com'
@@ -63054,6 +63042,7 @@ payload:
   - '+.zikao365.com'
   - '+.zikao5.com'
   - '+.zikaocqi.com'
+  - '+.zikaogd.com'
   - '+.zikaoshu.net'
   - '+.zikaoshu.vip'
   - '+.zikaosw.com'
@@ -63200,7 +63189,6 @@ payload:
   - '+.zje.com'
   - '+.zjedps.com'
   - '+.zjedu.org'
-  - '+.zjepe.com'
   - '+.zjfdc.net'
   - '+.zjft.com'
   - '+.zjgas.net'
@@ -63232,7 +63220,6 @@ payload:
   - '+.zjj17u.com'
   - '+.zjj21.com'
   - '+.zjj588.com'
-  - '+.zjjbtl.com'
   - '+.zjjd.org'
   - '+.zjjgcyz.com'
   - '+.zjjgy.com'
@@ -63476,6 +63463,7 @@ payload:
   - '+.zmxiazai.com'
   - '+.zmxiu.com'
   - '+.zmye5vly.com'
+  - '+.zmzb.com'
   - '+.zmzjk.com'
   - '+.zn8.com'
   - '+.znba.net'
@@ -63666,7 +63654,6 @@ payload:
   - '+.zsacg.com'
   - '+.zsaxi.com'
   - '+.zsbeike.com'
-  - '+.zsbit.com'
   - '+.zsbsoft.com'
   - '+.zscaishang.com'
   - '+.zsdk.cc'
