--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1097,7 +1097,6 @@ payload:
   - '+.133998.com'
   - '+.133china.com'
   - '+.13482896776.com'
-  - '+.135-139.com'
   - '+.135019.com'
   - '+.135031.com'
   - '+.1351.com'
@@ -1245,7 +1244,6 @@ payload:
   - '+.1633.com'
   - '+.1633d.com'
   - '+.163663.com'
-  - '+.163686.com'
   - '+.1637.com'
   - '+.163888.net'
   - '+.163cdn.com'
@@ -2973,7 +2971,6 @@ payload:
   - '+.3817.com'
   - '+.381pk.com'
   - '+.38238r.com'
-  - '+.3829.com'
   - '+.3839.com'
   - '+.3839app.com'
   - '+.3839app.net'
@@ -3372,7 +3369,6 @@ payload:
   - '+.4779.com'
   - '+.47819.com'
   - '+.47gs.com'
-  - '+.47ks.com'
   - '+.47zu.com'
   - '+.48.com'
   - '+.4846.com'
@@ -8871,6 +8867,7 @@ payload:
   - '+.artverse.work'
   - '+.artvisioncg.com'
   - '+.artwe.com'
+  - '+.artwun.com'
   - '+.artww.com'
   - '+.artxun.com'
   - '+.arvato-ocs.com'
@@ -9709,7 +9706,6 @@ payload:
   - '+.baohuagroup.com'
   - '+.baoimg.net'
   - '+.baojia.com'
-  - '+.baojianpu.com'
   - '+.baojiazhijia.com'
   - '+.baojidaily.com'
   - '+.baojiehang.com'
@@ -15289,7 +15285,6 @@ payload:
   - '+.cnkybg.com'
   - '+.cnlaw.net'
   - '+.cnledw.com'
-  - '+.cnlhzb.com'
   - '+.cnlianjie.com'
   - '+.cnlid.net'
   - '+.cnlight.com'
@@ -19966,7 +19961,6 @@ payload:
   - '+.ehujia.com'
   - '+.ehuoke.com'
   - '+.ehuoyan.com'
-  - '+.ehust.net'
   - '+.ehuzhu.com'
   - '+.ehvacr.com'
   - '+.ei6nd.com'
@@ -22408,7 +22402,6 @@ payload:
   - '+.fzyfan.net'
   - '+.fzyfs.net'
   - '+.fzzqcdn.com'
-  - '+.fzzyky.com'
   - '+.g-emall.com'
   - '+.g-photography.net'
   - '+.g-var.com'
@@ -25950,6 +25943,7 @@ payload:
   - '+.hf12345.vip'
   - '+.hf365.com'
   - '+.hf777.com'
+  - '+.hfabiao.com'
   - '+.hfanss.com'
   - '+.hfbaogao.com'
   - '+.hfbeta.com'
@@ -26797,7 +26791,6 @@ payload:
   - '+.hottui.com'
   - '+.hotwind.net'
   - '+.hotwindbox.com'
-  - '+.houbank.com'
   - '+.houcaller.com'
   - '+.houdao.net'
   - '+.houdask.com'
@@ -28867,7 +28860,6 @@ payload:
   - '+.ihongqiqu.com'
   - '+.ihou.com'
   - '+.ihr360.com'
-  - '+.ihref.com'
   - '+.ihrscloud.com'
   - '+.ihuaben.com'
   - '+.ihuan.me'
@@ -28878,7 +28870,6 @@ payload:
   - '+.ihui.com'
   - '+.ihuidian.com'
   - '+.ihuigo.com'
-  - '+.ihuikou.net'
   - '+.ihuipao.com'
   - '+.ihuman.com'
   - '+.ihumand.com'
@@ -30632,7 +30623,6 @@ payload:
   - '+.jiagouyun.com'
   - '+.jiaguhome.com'
   - '+.jiagulun.com'
-  - '+.jiahe100.com'
   - '+.jiaheu.com'
   - '+.jiahuacinema.com'
   - '+.jiahuaming.com'
@@ -32968,6 +32958,7 @@ payload:
   - '+.keep.com'
   - '+.keepc.com'
   - '+.keepcdn.com'
+  - '+.keepmobi.com'
   - '+.keepyoga.com'
   - '+.keerdapower.com'
   - '+.keerworld.com'
@@ -40277,6 +40268,7 @@ payload:
   - '+.nuokui.com'
   - '+.nuomi.com'
   - '+.nuomicikoi.com'
+  - '+.nuomili.com'
   - '+.nuomiphp.com'
   - '+.nuonuo.com'
   - '+.nuozhan.com'
@@ -40491,7 +40483,6 @@ payload:
   - '+.office-peixun.com'
   - '+.officecdn.microsoft.com'
   - '+.officectrl.com'
-  - '+.officeedit.com'
   - '+.officese.com'
   - '+.officesoftcn.com'
   - '+.officeweb365.com'
@@ -51956,7 +51947,6 @@ payload:
   - '+.tywh.com'
   - '+.tywxw.la'
   - '+.tyy6.com'
-  - '+.tyyhf.com'
   - '+.tyymt.com'
   - '+.tyzscl.com'
   - '+.tz-dsp.com'
@@ -52887,6 +52877,7 @@ payload:
   - '+.velep.com'
   - '+.velocaps.com'
   - '+.vemarsdev.com'
+  - '+.vemarsstatic.com'
   - '+.vemic.com'
   - '+.vemvm.com'
   - '+.ventoy.net'
@@ -53140,6 +53131,7 @@ payload:
   - '+.viviv.com'
   - '+.vivo.com'
   - '+.vivoglobal.com'
+  - '+.vivojrkj.com'
   - '+.vivokb.com'
   - '+.vivst.com'
   - '+.viwik.com'
@@ -53428,7 +53420,6 @@ payload:
   - '+.vzuu.com'
   - '+.w-e.cc'
   - '+.w0663.com'
-  - '+.w0882.com'
   - '+.w0lker.com'
   - '+.w10a.com'
   - '+.w10xitong.com'
@@ -56557,7 +56548,6 @@ payload:
   - '+.xhup.club'
   - '+.xhwhouse.com'
   - '+.xhxsw.com'
-  - '+.xhxw.com'
   - '+.xhy.com'
   - '+.xhyd.com'
   - '+.xhytd.com'
@@ -57842,6 +57832,7 @@ payload:
   - '+.xmqyh321.com'
   - '+.xmr-zh.com'
   - '+.xmrbi.com'
+  - '+.xms45.com'
   - '+.xmsec.cc'
   - '+.xmshqh.com'
   - '+.xmsixian.com'
@@ -60091,6 +60082,7 @@ payload:
   - '+.yolipai.net'
   - '+.yoloboo.com'
   - '+.yoloho.com'
+  - '+.yoloogames.com'
   - '+.yomiko.cloud'
   - '+.yomiko.club'
   - '+.yomiko.fun'
@@ -62102,7 +62094,6 @@ payload:
   - '+.zhangu365.com'
   - '+.zhangweijie.net'
   - '+.zhangwenli.com'
-  - '+.zhangxinhuichuan.com'
   - '+.zhangxinhulian.com'
   - '+.zhangxinxu.com'
   - '+.zhangyin.org'
@@ -62440,6 +62431,7 @@ payload:
   - '+.zhijiangames.com'
   - '+.zhijiaoyi.com'
   - '+.zhijiapro.com'
+  - '+.zhijiashe.com'
   - '+.zhijidoc.com'
   - '+.zhijieketang.com'
   - '+.zhijin.com'
@@ -62975,6 +62967,7 @@ payload:
   - '+.zhuzhouwang.com'
   - '+.zhuzi.me'
   - '+.zhuzihaoke.com'
+  - '+.zhuziplay.com'
   - '+.zhw2101024.com'
   - '+.zhwangart.com'
   - '+.zhwdw.com'
