--- a/directbak.yaml
+++ b/directbak.yaml
@@ -787,7 +787,6 @@ payload:
   - '+.108sq.com'
   - '+.108tian.com'
   - '+.109.com'
-  - '+.10909.com'
   - '+.109876543210.com'
   - '+.10bests.com'
   - '+.10besty.com'
@@ -1283,6 +1282,7 @@ payload:
   - '+.16816.com'
   - '+.16838.com'
   - '+.1684.cc'
+  - '+.168510.com'
   - '+.1688.com'
   - '+.16885.com'
   - '+.16886000.com'
@@ -1312,7 +1312,6 @@ payload:
   - '+.168tea.com'
   - '+.168tex.com'
   - '+.168tochina.com'
-  - '+.168yyzj.com'
   - '+.168zcw.com'
   - '+.169.com'
   - '+.169163.com'
@@ -2323,6 +2322,7 @@ payload:
   - '+.2dph.com'
   - '+.2du.net'
   - '+.2dyou.com'
+  - '+.2ed5d.com'
   - '+.2f.com'
   - '+.2fc5.com'
   - '+.2floorings.com'
@@ -2399,6 +2399,7 @@ payload:
   - '+.300hu.com'
   - '+.300ppt.com'
   - '+.300zi.com'
+  - '+.301-66cdn.com'
   - '+.301688.com'
   - '+.301mba.com'
   - '+.301nn.com'
@@ -2784,7 +2785,6 @@ payload:
   - '+.360yao.com'
   - '+.360yfw.com'
   - '+.360youtu.com'
-  - '+.360zhuizhu.com'
   - '+.360zhyx.com'
   - '+.361.cm'
   - '+.361757.com'
@@ -4501,6 +4501,7 @@ payload:
   - '+.5676.com'
   - '+.5678la.com'
   - '+.567idc.com'
+  - '+.567pan.com'
   - '+.5680420.cc'
   - '+.5680433.cc'
   - '+.5684.com'
@@ -5275,6 +5276,7 @@ payload:
   - '+.6wan.com'
   - '+.6wtx.com'
   - '+.6xd.com'
+  - '+.6xhuo.com'
   - '+.6xigema.com'
   - '+.6xw.com'
   - '+.6y6s066.com'
@@ -6607,6 +6609,7 @@ payload:
   - '+.96bbs.com'
   - '+.96caifu.com'
   - '+.96dp.com'
+  - '+.96f2d.com'
   - '+.96hq.com'
   - '+.96jm.com'
   - '+.96jx.com'
@@ -7387,6 +7390,7 @@ payload:
   - '+.age-spa.com'
   - '+.age.tv'
   - '+.age06.com'
+  - '+.agedm1.com'
   - '+.agefans.app'
   - '+.agenge.com'
   - '+.agenow.com'
@@ -15282,7 +15286,6 @@ payload:
   - '+.cnkok.com'
   - '+.cnkuai.com'
   - '+.cnky.net'
-  - '+.cnkybg.com'
   - '+.cnlaw.net'
   - '+.cnledw.com'
   - '+.cnlianjie.com'
@@ -16046,7 +16049,6 @@ payload:
   - '+.cqsckj02.com'
   - '+.cqscmy.net'
   - '+.cqshenou.com'
-  - '+.cqslib.org'
   - '+.cqslsc.com'
   - '+.cqsms.net'
   - '+.cqsoft.org'
@@ -19398,6 +19400,7 @@ payload:
   - '+.e12e.com'
   - '+.e139.com'
   - '+.e1988.com'
+  - '+.e213155.com'
   - '+.e21cn.com'
   - '+.e22a.com'
   - '+.e24c.com'
@@ -19636,7 +19639,6 @@ payload:
   - '+.echao8.com'
   - '+.echargenet.com'
   - '+.echarpile.com'
-  - '+.echashi.com'
   - '+.echatsoft.com'
   - '+.echead.com'
   - '+.echepiao.com'
@@ -19929,7 +19931,6 @@ payload:
   - '+.egt365.com'
   - '+.ehafo.com'
   - '+.ehaier.com'
-  - '+.ehaimao.com'
   - '+.ehaiwang.com'
   - '+.ehangtian.com'
   - '+.ehaoyao.com'
@@ -20199,6 +20200,7 @@ payload:
   - '+.enmonster.com'
   - '+.enmotech.com'
   - '+.enmuo.com'
+  - '+.enn-ng.com'
   - '+.ennresearch.com'
   - '+.ennweekly.com'
   - '+.enoya.com'
@@ -20339,7 +20341,6 @@ payload:
   - '+.ernest.me'
   - '+.ernxzc.com'
   - '+.eroacg.com'
-  - '+.erongda.com'
   - '+.erongdu.com'
   - '+.erpang.cc'
   - '+.erpcoo.com'
@@ -21294,6 +21295,7 @@ payload:
   - '+.feiyuapi.com'
   - '+.feiyuemu.com'
   - '+.feiyunjs.com'
+  - '+.feiyunxiazai.com'
   - '+.feiyuteam.com'
   - '+.feizan.com'
   - '+.feizhaojun.com'
@@ -25195,6 +25197,7 @@ payload:
   - '+.haoyun13.com'
   - '+.haoyun56.com'
   - '+.haoyunbb.com'
+  - '+.haoyundao.net'
   - '+.haoyunma.com'
   - '+.haozai120.com'
   - '+.haozaishop.com'
@@ -28805,6 +28808,8 @@ payload:
   - '+.igoyx.com'
   - '+.igreatdream.com'
   - '+.igslb.net'
+  - '+.igtm-a101.com'
+  - '+.igtm-b101.com'
   - '+.iguanyu.com'
   - '+.iguazutraffic.xyz'
   - '+.iguder.com'
@@ -29825,7 +29830,6 @@ payload:
   - '+.itaoyun.com'
   - '+.itavcn.com'
   - '+.itbegin.com'
-  - '+.itbiaoju.com'
   - '+.itbilu.com'
   - '+.itbkz.com'
   - '+.itblw.com'
@@ -34000,6 +34004,7 @@ payload:
   - '+.ky0048.cc'
   - '+.ky010.vip'
   - '+.ky01002.com'
+  - '+.ky01005.com'
   - '+.ky107.co'
   - '+.ky151.co'
   - '+.ky55005.com'
@@ -36565,6 +36570,7 @@ payload:
   - '+.lytpw.com'
   - '+.lytuchuang10.com'
   - '+.lytuchuang12.com'
+  - '+.lytuchuang13.com'
   - '+.lytuchuang2.com'
   - '+.lytuchuang3.com'
   - '+.lytuchuang4.com'
@@ -46042,7 +46048,6 @@ payload:
   - '+.sh-holfer.com'
   - '+.sh-holiday.com'
   - '+.sh-hywin.com'
-  - '+.sh-investment.net'
   - '+.sh-kechen.com'
   - '+.sh-kr.net'
   - '+.sh-ryjx.com'
@@ -48162,6 +48167,7 @@ payload:
   - '+.soushu.vip'
   - '+.soushuking.com'
   - '+.sousou.com'
+  - '+.sousou.pro'
   - '+.sousoudus.com'
   - '+.sousuoyouxi.com'
   - '+.soutaowang.com'
@@ -49018,6 +49024,7 @@ payload:
   - '+.swstsg.com'
   - '+.swt0.com'
   - '+.swtuchuang4.com'
+  - '+.swtuchuang5.com'
   - '+.swupdl.adobe.com'
   - '+.swwlotus.com'
   - '+.swwy.com'
@@ -49657,7 +49664,6 @@ payload:
   - '+.tan07.com'
   - '+.tan14.net'
   - '+.tan8.com'
-  - '+.tan90.me'
   - '+.tanamari.com'
   - '+.tanapk.com'
   - '+.tanbaicun.com'
@@ -50047,7 +50053,6 @@ payload:
   - '+.techgogogo.com'
   - '+.techingrid.net'
   - '+.techmiao.com'
-  - '+.technode.com'
   - '+.techoke.com'
   - '+.techonegame.com'
   - '+.techqianmo.com'
@@ -50589,6 +50594,7 @@ payload:
   - '+.tigerbrokers.net'
   - '+.tigeresop.com'
   - '+.tigerfintech.com'
+  - '+.tigerhouse.cc'
   - '+.tigersecurities.com'
   - '+.tigeryun.com'
   - '+.tiham.com'
@@ -52212,7 +52218,6 @@ payload:
   - '+.ui001.com'
   - '+.ui100day.com'
   - '+.ui63.com'
-  - '+.ui879.com'
   - '+.uibaba.com'
   - '+.uibim.com'
   - '+.uibmm.com'
@@ -53106,7 +53111,6 @@ payload:
   - '+.visioncloudapi.com'
   - '+.visionly.org'
   - '+.visionsinactionusa.com'
-  - '+.visionsoar.com'
   - '+.visionstar-tech.com'
   - '+.visionunion.com'
   - '+.visionvera.com'
@@ -57686,7 +57690,6 @@ payload:
   - '+.xjzhongwu.com'
   - '+.xjzlyy.com'
   - '+.xjzsks.com'
-  - '+.xjzyplay.com'
   - '+.xk8090.com'
   - '+.xk89.com'
   - '+.xk9l.com'
@@ -59279,6 +59282,7 @@ payload:
   - '+.yichangly.com'
   - '+.yiche.com'
   - '+.yichemall.com'
+  - '+.yichengji.com'
   - '+.yichesafe.com'
   - '+.yichmh.com'
   - '+.yichuyifan.com'
@@ -59793,7 +59797,6 @@ payload:
   - '+.yiyu.com'
   - '+.yiyuanqiang.net'
   - '+.yiyuansoft.com'
-  - '+.yiyuantian.com'
   - '+.yiyuanyi.org'
   - '+.yiyuetop.com'
   - '+.yiyum.com'
@@ -60320,6 +60323,7 @@ payload:
   - '+.youshifu.com'
   - '+.youshikoudai.com'
   - '+.youshixiu.com'
+  - '+.youshop04.com'
   - '+.youshop10.com'
   - '+.youshu.cc'
   - '+.youshuba.cc'
@@ -60679,7 +60683,6 @@ payload:
   - '+.yuanbaobaoxian.com'
   - '+.yuanbaohui.com'
   - '+.yuanbin.me'
-  - '+.yuancailiao.net'
   - '+.yuancdn.com'
   - '+.yuancefund.com'
   - '+.yuanchengxiezuo.com'
