--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1748,6 +1748,7 @@ payload:
   - '+.1kyx.com'
   - '+.1lan.tv'
   - '+.1lewen.com'
+  - '+.1liantu.com'
   - '+.1look.tv'
   - '+.1lou.com'
   - '+.1lzs.com'
@@ -2728,6 +2729,7 @@ payload:
   - '+.360ito.com'
   - '+.360jk.com'
   - '+.360jq.com'
+  - '+.360jrjietiao.com'
   - '+.360jrkt.com'
   - '+.360js.com'
   - '+.360jzhm.com'
@@ -3820,7 +3822,6 @@ payload:
   - '+.51langtu.com'
   - '+.51ldb.com'
   - '+.51ldzx.com'
-  - '+.51lexing.com'
   - '+.51lg.com'
   - '+.51lifes.com'
   - '+.51lingji.com'
@@ -4633,6 +4634,7 @@ payload:
   - '+.58q8.com'
   - '+.58qz.com'
   - '+.58supin.com'
+  - '+.58touxiang.com'
   - '+.58trz.com'
   - '+.58tyh.com'
   - '+.58ubk.com'
@@ -9244,7 +9246,6 @@ payload:
   - '+.b-chem.com'
   - '+.b-eurochina.com'
   - '+.b-fairy.com'
-  - '+.b086.com'
   - '+.b1446.com'
   - '+.b178.com'
   - '+.b1bj.com'
@@ -11178,7 +11179,6 @@ payload:
   - '+.bnncn.com'
   - '+.bnnd.net'
   - '+.bnqgsl.com'
-  - '+.bnu120.space'
   - '+.bnupg.com'
   - '+.bnwin.com'
   - '+.bnxb.com'
@@ -14578,7 +14578,6 @@ payload:
   - '+.cirno9.net'
   - '+.cirs-reach.com'
   - '+.cirunzhang.com'
-  - '+.cismag.net'
   - '+.cismef.com'
   - '+.cispotlight.com'
   - '+.cisskwt.com'
@@ -14718,7 +14717,6 @@ payload:
   - '+.cl-kongtiao.com'
   - '+.cl0438.com'
   - '+.cl2009.com'
-  - '+.cl597.com'
   - '+.clady.cc'
   - '+.claiks.com'
   - '+.clanzx.net'
@@ -14736,6 +14734,7 @@ payload:
   - '+.clclibrary.com'
   - '+.clcmw.com'
   - '+.clcyd.com'
+  - '+.cldbiz.com'
   - '+.clean-cn.com'
   - '+.clear-sz.com'
   - '+.clear888.com'
@@ -15459,6 +15458,7 @@ payload:
   - '+.cntv.com'
   - '+.cntwg.com'
   - '+.cnuninet.net'
+  - '+.cnur.com'
   - '+.cnutcon.com'
   - '+.cnuuu.com'
   - '+.cnv168.com'
@@ -16352,7 +16352,6 @@ payload:
   - '+.ct10000.com'
   - '+.ct108.com'
   - '+.ct52.com'
-  - '+.ct597.com'
   - '+.ctaca.com'
   - '+.ctags.net'
   - '+.ctans.com'
@@ -20776,7 +20775,6 @@ payload:
   - '+.f5yx.com'
   - '+.f7777.net'
   - '+.fa-today.com'
-  - '+.fa597.com'
   - '+.fa68.com'
   - '+.faakee.com'
   - '+.faanw.com'
@@ -21165,7 +21163,6 @@ payload:
   - '+.fcz360.com'
   - '+.fczx.com'
   - '+.fd-trust.com'
-  - '+.fd597.com'
   - '+.fd7c.com'
   - '+.fdcyun.com'
   - '+.fdczbstatic.com'
@@ -21963,7 +21960,6 @@ payload:
   - '+.fpvdxd5.com'
   - '+.fpwap.com'
   - '+.fpxz.net'
-  - '+.fq597.com'
   - '+.fqapps.com'
   - '+.fqgj.net'
   - '+.fqis.xin'
@@ -22480,7 +22476,6 @@ payload:
   - '+.galaxyinfo.com'
   - '+.galaxymacau.com'
   - '+.galaxyns.net'
-  - '+.galeo.me'
   - '+.gallopgazelle.com'
   - '+.galstars.net'
   - '+.galsun.com'
@@ -28062,7 +28057,6 @@ payload:
   - '+.hzjlxx.com'
   - '+.hzjmjl.com'
   - '+.hzjqhy.com'
-  - '+.hzjs56.com'
   - '+.hzjunglepay.com'
   - '+.hzkayo.com'
   - '+.hzkshx.com'
@@ -28212,6 +28206,7 @@ payload:
   - '+.i9star.com'
   - '+.ia-shenzhen.com'
   - '+.iacblog.com'
+  - '+.iaczlg.cfd'
   - '+.iaddata.com'
   - '+.iadmob.com'
   - '+.iadmore.com'
@@ -28350,7 +28345,6 @@ payload:
   - '+.ican365.net'
   - '+.icandata.com'
   - '+.icangshu111.com'
-  - '+.icanzc.com'
   - '+.icardfinancial.com'
   - '+.icaredbd.com'
   - '+.icasiso.com'
@@ -28807,7 +28801,6 @@ payload:
   - '+.igooma.com'
   - '+.igoyx.com'
   - '+.igreatdream.com'
-  - '+.igslb.net'
   - '+.igtm-a101.com'
   - '+.igtm-b101.com'
   - '+.iguanyu.com'
@@ -29242,7 +29235,6 @@ payload:
   - '+.imugeda.com'
   - '+.imuke.com'
   - '+.imuo.com'
-  - '+.imushan.com'
   - '+.imvictor.tech'
   - '+.imw.me'
   - '+.imwaco.com'
@@ -30680,6 +30672,7 @@ payload:
   - '+.jiandaima.com'
   - '+.jiandan.net'
   - '+.jiandansousuo.com'
+  - '+.jiandantianqi.com'
   - '+.jiandanxinli.com'
   - '+.jiandaopay.com'
   - '+.jiandaoyun.com'
@@ -35746,6 +35739,7 @@ payload:
   - '+.lmwlhh.com'
   - '+.lmwljz.com'
   - '+.lmxxxz.com'
+  - '+.ln76yf.cfd'
   - '+.lnamphp.com'
   - '+.lncldapi.com'
   - '+.lncnw.com'
@@ -36842,7 +36836,6 @@ payload:
   - '+.majia99.com'
   - '+.majiamen.com'
   - '+.majianwei.com'
-  - '+.majing.io'
   - '+.major-epoch.com'
   - '+.majorsec.com'
   - '+.majsoul.com'
@@ -36875,7 +36868,6 @@ payload:
   - '+.maldiveszh.com'
   - '+.maldun.com'
   - '+.males120.com'
-  - '+.maliapi.com'
   - '+.malijing.com'
   - '+.maliquankai.com'
   - '+.mall-builder.com'
@@ -39949,7 +39941,6 @@ payload:
   - '+.njqxrc.com'
   - '+.njrc365.com'
   - '+.njrx.cc'
-  - '+.njshengyuanli.com'
   - '+.njsjz.com'
   - '+.njskps.com'
   - '+.njsxbw.com'
@@ -40626,6 +40617,7 @@ payload:
   - '+.omacloud.com'
   - '+.omarea.com'
   - '+.omayse.com'
+  - '+.omccsh.com'
   - '+.omchain.com'
   - '+.omdnchina.com'
   - '+.omegatravel.net'
@@ -41771,6 +41763,7 @@ payload:
   - '+.piccamc.com'
   - '+.picchealth.com'
   - '+.piccjs.com'
+  - '+.piclabo.xyz'
   - '+.picooc.com'
   - '+.picosmos.net'
   - '+.picp.io'
@@ -46449,7 +46442,6 @@ payload:
   - '+.shenmayouxi.com'
   - '+.shenmikj.com'
   - '+.shenmou.com'
-  - '+.shenmufeiyang0912.com'
   - '+.shenou.com'
   - '+.shenpinwu.com'
   - '+.shenpucw.com'
@@ -49821,7 +49813,6 @@ payload:
   - '+.taoniupin.com'
   - '+.taooo.cc'
   - '+.taopiaopiao.com'
-  - '+.taopindi.com'
   - '+.taopinquan.com'
   - '+.taoq.net'
   - '+.taoqao.com'
@@ -51434,7 +51425,6 @@ payload:
   - '+.ttbba.com'
   - '+.ttbbss.com'
   - '+.ttbc33.com'
-  - '+.ttbcdn.com'
   - '+.ttcad.com'
   - '+.ttdailynews.com'
   - '+.ttdown.com'
@@ -52955,7 +52945,6 @@ payload:
   - '+.via-cert.com'
   - '+.viaeda.com'
   - '+.vial.cc'
-  - '+.viayoo.com'
   - '+.vibaike.com'
   - '+.vibit.cc'
   - '+.vic18.com'
@@ -56846,7 +56835,6 @@ payload:
   - '+.xiaolizhuli.com'
   - '+.xiaolu123.com'
   - '+.xiaoluboke.com'
-  - '+.xiaoluhaohuo.com'
   - '+.xiaoluyouxuan.com'
   - '+.xiaoluyy.com'
   - '+.xiaoma.com'
@@ -60025,7 +60013,6 @@ payload:
   - '+.ynxdfpr.com'
   - '+.ynxr.com'
   - '+.ynxxb.com'
-  - '+.ynyazhuo.com'
   - '+.ynycloud.xyz'
   - '+.ynyes.com'
   - '+.ynyp.com'
@@ -60102,7 +60089,6 @@ payload:
   - '+.yonghuigj.com'
   - '+.yonghuivip.com'
   - '+.yongkao.com'
-  - '+.yonglang.co'
   - '+.yongqianbao.com'
   - '+.yongqiaonews.com'
   - '+.yongqischool.net'
@@ -62639,7 +62625,6 @@ payload:
   - '+.zhongguohuo.com'
   - '+.zhongguojie.org'
   - '+.zhongguojixiewang.com'
-  - '+.zhongguomap.com'
   - '+.zhongguopeixun.net'
   - '+.zhongguose.com'
   - '+.zhongguosou.com'
