--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3009,6 +3009,7 @@ payload:
   - '+.3975app.com'
   - '+.3975cdn.com'
   - '+.3977s.com'
+  - '+.3977t.vip'
   - '+.399493.com'
   - '+.39ask.net'
   - '+.39center.com'
@@ -3354,7 +3355,6 @@ payload:
   - '+.46466.me'
   - '+.465676.tv'
   - '+.4658.net'
-  - '+.4662000.com'
   - '+.46644.com'
   - '+.46771313.com'
   - '+.4699a.com'
@@ -4476,6 +4476,7 @@ payload:
   - '+.55tuan.com'
   - '+.55tuanimg.com'
   - '+.55xiazai.com'
+  - '+.55xoxo.vip'
   - '+.55y5.com'
   - '+.56-7.com'
   - '+.56.com'
@@ -4545,6 +4546,7 @@ payload:
   - '+.571free.com'
   - '+.571xz.com'
   - '+.57357.vip'
+  - '+.57359.es'
   - '+.5755.com'
   - '+.576.com'
   - '+.57608.com'
@@ -4559,7 +4561,6 @@ payload:
   - '+.57dp.com'
   - '+.57gif.com'
   - '+.57go.com'
-  - '+.57pjpj.com'
   - '+.57px.com'
   - '+.57qy.com'
   - '+.57sc.com'
@@ -5057,9 +5058,11 @@ payload:
   - '+.66460.com'
   - '+.6655.la'
   - '+.6660333.com'
+  - '+.666546.xyz'
   - '+.6666519.net'
   - '+.666666.so'
   - '+.66667aaa.com'
+  - '+.666834.xyz'
   - '+.6669667.com'
   - '+.666gps.com'
   - '+.666idc.com'
@@ -8600,6 +8603,7 @@ payload:
   - '+.apicvn.com'
   - '+.apigwtencent.com'
   - '+.apiview.com'
+  - '+.apixj.xyz'
   - '+.apizb.com'
   - '+.apizl.com'
   - '+.apizza.cc'
@@ -11161,6 +11165,7 @@ payload:
   - '+.bmtcled.com'
   - '+.bmvps.com'
   - '+.bmw8033.com'
+  - '+.bmyy.work'
   - '+.bnacg.com'
   - '+.bnapp.com'
   - '+.bnbcamp.com'
@@ -12321,6 +12326,7 @@ payload:
   - '+.cc11bh.com'
   - '+.cc222.com'
   - '+.cc55k.com'
+  - '+.cc667788cc.com'
   - '+.cc7m.com'
   - '+.cc8.cc'
   - '+.ccabchina.com'
@@ -19291,7 +19297,6 @@ payload:
   - '+.dzbchina.com'
   - '+.dzblxx.com'
   - '+.dzboligang.com'
-  - '+.dzcgtgcl.com'
   - '+.dzcj.tv'
   - '+.dzcjw.com'
   - '+.dzcmedu.com'
@@ -20129,6 +20134,7 @@ payload:
   - '+.emodor.com'
   - '+.emojimobile.com'
   - '+.emojiwiz.com'
+  - '+.empleosillinois.com'
   - '+.emrl0z.com'
   - '+.ems-audio.com'
   - '+.ems517.com'
@@ -22415,6 +22421,7 @@ payload:
   - '+.g3d.org'
   - '+.g3img.com'
   - '+.g3user.com'
+  - '+.g4weixin.com'
   - '+.g5h4.com'
   - '+.g72.com'
   - '+.g77775555.com'
@@ -22691,7 +22698,6 @@ payload:
   - '+.gaszx.com'
   - '+.gate-dhgames.com'
   - '+.gateface.com'
-  - '+.gatewang.com'
   - '+.gather-dns.com'
   - '+.gathernames.com'
   - '+.gaussianoptics.com'
@@ -23727,7 +23733,6 @@ payload:
   - '+.gqgkj.com'
   - '+.gqjd.net'
   - '+.gqk.tv'
-  - '+.gqooh.com'
   - '+.gqqsm.com'
   - '+.gqsoso.com'
   - '+.gqsou.com'
@@ -29620,7 +29625,6 @@ payload:
   - '+.iquanfen.com'
   - '+.iquanwai.com'
   - '+.iqujing.com'
-  - '+.iquncha.com'
   - '+.iqunix.com'
   - '+.iqunix.store'
   - '+.iqupdate.com'
@@ -33266,6 +33270,7 @@ payload:
   - '+.kk30.com'
   - '+.kk39w.com'
   - '+.kk3g.net'
+  - '+.kk667788kk.com'
   - '+.kkapp.com'
   - '+.kkbuyu8.com'
   - '+.kkcache.net'
@@ -34377,6 +34382,7 @@ payload:
   - '+.larenla.com'
   - '+.large.net'
   - '+.larkapp.com'
+  - '+.larkroad.com'
   - '+.larksuite.com'
   - '+.laruence.com'
   - '+.las88889999.com'
@@ -34500,6 +34506,7 @@ payload:
   - '+.lddgo.net'
   - '+.ldeng.com'
   - '+.ldjx.cc'
+  - '+.ldkj-zs.com'
   - '+.ldmap.net'
   - '+.ldmnq.com'
   - '+.ldnovel.com'
@@ -37147,6 +37154,7 @@ payload:
   - '+.mayishoubei.com'
   - '+.mayitek.com'
   - '+.mayitxt.com'
+  - '+.mayiui.com'
   - '+.mayiw.com'
   - '+.mayiwenku.com'
   - '+.mayiyx.com'
@@ -38739,6 +38747,7 @@ payload:
   - '+.mtksj.com'
   - '+.mtktk.com'
   - '+.mtm.mo'
+  - '+.mtmits.com'
   - '+.mtmos.com'
   - '+.mtmss.com'
   - '+.mtmssdn.com'
@@ -40319,7 +40328,6 @@ payload:
   - '+.nxsks.com'
   - '+.nxtianshangb.com'
   - '+.nxty88.com'
-  - '+.nxw.so'
   - '+.nxwly.com'
   - '+.nxyqs.com'
   - '+.ny-yy.com'
@@ -40393,7 +40401,6 @@ payload:
   - '+.objcoding.com'
   - '+.obkoro1.com'
   - '+.obkprint.com'
-  - '+.obohe.com'
   - '+.obolee.com'
   - '+.oborad.com'
   - '+.obowin.com'
@@ -41363,6 +41370,7 @@ payload:
   - '+.paysapi.com'
   - '+.paytend.com'
   - '+.payxinyi.com'
+  - '+.pb114.xyz'
   - '+.pb89.com'
   - '+.pbcan.com'
   - '+.pblie.com'
@@ -44963,7 +44971,6 @@ payload:
   - '+.rubaoo.com'
   - '+.ruby-china.com'
   - '+.rubybrides.com'
-  - '+.rubyconfchina.org'
   - '+.rubyer.me'
   - '+.ruchee.com'
   - '+.ruchu.club'
@@ -47018,7 +47025,6 @@ payload:
   - '+.shulb.com'
   - '+.shuliao.com'
   - '+.shulidata.com'
-  - '+.shulihua.net'
   - '+.shuliyun.com'
   - '+.shumahezi.com'
   - '+.shumaidata.com'
@@ -50908,7 +50914,6 @@ payload:
   - '+.tomax.xyz'
   - '+.tomczhen.com'
   - '+.tomdiy.com'
-  - '+.tommerup.net'
   - '+.tomonline-inc.com'
   - '+.tomotoes.com'
   - '+.tompda.com'
@@ -51870,6 +51875,7 @@ payload:
   - '+.txwy.com.tw'
   - '+.txwy.com'
   - '+.txxbxx.com'
+  - '+.txy6666.com'
   - '+.txy8.com'
   - '+.txyapp.com'
   - '+.txyes.com'
@@ -55709,7 +55715,6 @@ payload:
   - '+.wuhuashe.com'
   - '+.wuhubtv.com'
   - '+.wuhusanlian.com'
-  - '+.wuhushengwei.com'
   - '+.wui5.com'
   - '+.wuji.com'
   - '+.wujiangtong.com'
@@ -56271,7 +56276,6 @@ payload:
   - '+.xcdn.global'
   - '+.xcexe.com'
   - '+.xcfunds.com'
-  - '+.xcgjj.com'
   - '+.xcgogo.club'
   - '+.xcgogo.site'
   - '+.xcgp.com'
@@ -56520,7 +56524,6 @@ payload:
   - '+.xhscdn.com'
   - '+.xhsd.com'
   - '+.xhslink.com'
-  - '+.xhspx.com'
   - '+.xhsyww.com'
   - '+.xht.com.hk'
   - '+.xhtd291.com'
@@ -58381,6 +58384,7 @@ payload:
   - '+.xxingclub.com'
   - '+.xxizj.com'
   - '+.xxjcy.com'
+  - '+.xxjdns.com'
   - '+.xxjrjxc.com'
   - '+.xxjrqc.com'
   - '+.xxka.com'
@@ -59107,6 +59111,7 @@ payload:
   - '+.yexinggroup.com'
   - '+.yeyaji9.com'
   - '+.yeyday.com'
+  - '+.yeyeriav.com'
   - '+.yeyexx.com'
   - '+.yeyexx8.com'
   - '+.yeyimg.com'
@@ -59607,6 +59612,7 @@ payload:
   - '+.yiqihao.com'
   - '+.yiqijian.com'
   - '+.yiqijixiang.com'
+  - '+.yiqikan123.xyz'
   - '+.yiqikan8.com'
   - '+.yiqimaila.com'
   - '+.yiqiming88.com'
@@ -61320,6 +61326,7 @@ payload:
   - '+.yxzb.tv'
   - '+.yxzd.info'
   - '+.yxztyy.com'
+  - '+.yxzu.com'
   - '+.yxzxgy.com'
   - '+.yy-xjy.com'
   - '+.yy.com'
@@ -61381,6 +61388,7 @@ payload:
   - '+.yyq.com'
   - '+.yyrec.com'
   - '+.yyrenting.com'
+  - '+.yyrplay.com'
   - '+.yyrtv.com'
   - '+.yysg11.co'
   - '+.yystatic.com'
