--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2215,7 +2215,6 @@ payload:
   - '+.265g.com'
   - '+.265o.com'
   - '+.265ps.com'
-  - '+.265tv.com'
   - '+.266.la'
   - '+.266555c.com'
   - '+.266680.com'
@@ -2830,7 +2829,6 @@ payload:
   - '+.365digitalonline.com'
   - '+.365ditu.com'
   - '+.365dmp.com'
-  - '+.365dxlw.com'
   - '+.365editor.com'
   - '+.365eme.com'
   - '+.365essay.com'
@@ -3278,9 +3276,6 @@ payload:
   - '+.42651.com'
   - '+.426g.com'
   - '+.429006.com'
-  - '+.42927bj.com'
-  - '+.42927gz.com'
-  - '+.42927xz.com'
   - '+.42trip.com'
   - '+.42xz.com'
   - '+.4311.com'
@@ -3307,6 +3302,7 @@ payload:
   - '+.4399api.net'
   - '+.4399biule.com'
   - '+.4399data.com'
+  - '+.4399dmdq.com'
   - '+.4399dmw.com'
   - '+.4399doc.com'
   - '+.4399er.com'
@@ -3391,6 +3387,7 @@ payload:
   - '+.49app.com'
   - '+.49ms.net'
   - '+.49pic.com'
+  - '+.49vps.com'
   - '+.49wanwan.com'
   - '+.49you.com'
   - '+.49yu.com'
@@ -3483,7 +3480,6 @@ payload:
   - '+.506fhq.com'
   - '+.50970.com'
   - '+.50bangzh.com'
-  - '+.50fff.net'
   - '+.50pk.com'
   - '+.50pkpk.com'
   - '+.50sht.com'
@@ -3512,7 +3508,6 @@ payload:
   - '+.51119.com'
   - '+.5117.com'
   - '+.511718.com'
-  - '+.5117tools.com'
   - '+.5118.com'
   - '+.5118img.com'
   - '+.5119.net'
@@ -5865,6 +5860,7 @@ payload:
   - '+.85878078.com'
   - '+.858game.com'
   - '+.85kf.com'
+  - '+.85wp.com'
   - '+.85xt.com'
   - '+.86-import.com'
   - '+.86.cc'
@@ -6584,7 +6580,6 @@ payload:
   - '+.962600.com'
   - '+.962740.com'
   - '+.96369.net'
-  - '+.9637.com'
   - '+.963999.com'
   - '+.96459.com'
   - '+.964yx.com'
@@ -6606,6 +6601,7 @@ payload:
   - '+.96877.net'
   - '+.968pk.com'
   - '+.969009.com'
+  - '+.96966.com'
   - '+.969g.com'
   - '+.96bbs.com'
   - '+.96caifu.com'
@@ -8363,6 +8359,7 @@ payload:
   - '+.anmobc.com'
   - '+.anmoxiansheng.com'
   - '+.ann9.com'
+  - '+.annabelz.com'
   - '+.annelhair.com'
   - '+.annhe.net'
   - '+.annto.com'
@@ -8842,6 +8839,7 @@ payload:
   - '+.artacode.com'
   - '+.artbeijing.net'
   - '+.artbookinchina.com'
+  - '+.artcg.design'
   - '+.artcns.com'
   - '+.artddu.com'
   - '+.artebuy.com'
@@ -12666,6 +12664,7 @@ payload:
   - '+.cdnbuild.net'
   - '+.cdnbye.com'
   - '+.cdncache.net'
+  - '+.cdncdncdn.com'
   - '+.cdncenter.com'
   - '+.cdnchushou.com'
   - '+.cdncl.net'
@@ -13064,7 +13063,6 @@ payload:
   - '+.chaimage.com'
   - '+.chain-store.net'
   - '+.chaincar.com'
-  - '+.chaincatcher.com'
   - '+.chainflag.com'
   - '+.chainknow.com'
   - '+.chainnode.com'
@@ -13356,6 +13354,7 @@ payload:
   - '+.chengzijianzhan.cc'
   - '+.chengzijianzhan.com'
   - '+.chengzivr.com'
+  - '+.chengzz.com'
   - '+.chenhr.com'
   - '+.chenhui.org'
   - '+.chenii.com'
@@ -14947,6 +14946,7 @@ payload:
   - '+.cmwin.com'
   - '+.cmxrcw.com'
   - '+.cmzd.com'
+  - '+.cmzfqn.com'
   - '+.cmzi.com'
   - '+.cmzj.net'
   - '+.cmzyk.com'
@@ -15007,7 +15007,6 @@ payload:
   - '+.cn8fre.com'
   - '+.cn99.com'
   - '+.cn9f.com'
-  - '+.cna5.com'
   - '+.cnaaa15.com'
   - '+.cnaaa6.com'
   - '+.cnaaa7.com'
@@ -16520,6 +16519,7 @@ payload:
   - '+.cvchina.info'
   - '+.cvchome.com'
   - '+.cvcri.com'
+  - '+.cvhacr.com'
   - '+.cvicse.com'
   - '+.cvicseks.com'
   - '+.cvmart.net'
@@ -17725,6 +17725,7 @@ payload:
   - '+.dggjqw.com'
   - '+.dggkj.com'
   - '+.dggvip.net'
+  - '+.dghehu.com'
   - '+.dghqmotor.com'
   - '+.dginfo.com'
   - '+.dgjiuqi.com'
@@ -17792,6 +17793,7 @@ payload:
   - '+.dht5867.com'
   - '+.dhvisiontech.com'
   - '+.dhwooden.com'
+  - '+.dhxrop.com'
   - '+.dhyct.com'
   - '+.dhygw20.com'
   - '+.dhygw2999.com'
@@ -18017,6 +18019,7 @@ payload:
   - '+.dijingchao.com'
   - '+.dijiuban.com'
   - '+.dijunsm.com'
+  - '+.dikmnhyxz.xyz'
   - '+.dili360.com'
   - '+.dili365.com'
   - '+.dililitv.com'
@@ -20558,6 +20561,7 @@ payload:
   - '+.evlook.com'
   - '+.evoc.com'
   - '+.evotrue.com'
+  - '+.evv1.com'
   - '+.evzhidao.com'
   - '+.ew9z.com'
   - '+.ewaga.com'
@@ -22333,6 +22337,7 @@ payload:
   - '+.fychinago.com'
   - '+.fycpu.com'
   - '+.fydeos.com'
+  - '+.fydns2023.com'
   - '+.fydns360.net'
   - '+.fyeds0.com'
   - '+.fyeds1.com'
@@ -22804,7 +22809,6 @@ payload:
   - '+.gdjdxy.com'
   - '+.gdjinge.com'
   - '+.gdjqwl.com'
-  - '+.gdjyrcw.com'
   - '+.gdjyw.com'
   - '+.gdkepler.com'
   - '+.gdkjb.com'
@@ -22814,7 +22818,6 @@ payload:
   - '+.gdlalian.com'
   - '+.gdlins.com'
   - '+.gdlsgz.com'
-  - '+.gdmingshizx.com'
   - '+.gdmm.com'
   - '+.gdmoa.org'
   - '+.gdmschina.com'
@@ -22954,7 +22957,6 @@ payload:
   - '+.gelics.com'
   - '+.gelonghui.com'
   - '+.gelu.me'
-  - '+.gembateam.com'
   - '+.gemchina.com'
   - '+.gemdale.com'
   - '+.gemii.cc'
@@ -23379,7 +23381,6 @@ payload:
   - '+.gmz88.com'
   - '+.gmzhushou.com'
   - '+.gmzi.com'
-  - '+.gn00.com'
   - '+.gn168.com'
   - '+.gndaily.com'
   - '+.gnehr.com'
@@ -23923,6 +23924,7 @@ payload:
   - '+.gtm-i1d7.com'
   - '+.gtm-i1d8.com'
   - '+.gtm-i1d9.com'
+  - '+.gtm-i2d3.com'
   - '+.gtm-i2d4.com'
   - '+.gtm-i2d8.com'
   - '+.gtm-i2d9.com'
@@ -24537,7 +24539,6 @@ payload:
   - '+.gzych.vip'
   - '+.gzyct.com'
   - '+.gzyeah.com'
-  - '+.gzyitop.com'
   - '+.gzylhyzx.com'
   - '+.gzyouai.com'
   - '+.gzyqtlxs.com'
@@ -24928,6 +24929,7 @@ payload:
   - '+.hanspub.org'
   - '+.hansrobot.com'
   - '+.hansuku.com'
+  - '+.hansunic.com'
   - '+.hantang59.com'
   - '+.hantangxintong.com'
   - '+.hanterry.com'
@@ -25406,7 +25408,6 @@ payload:
   - '+.hbptzsbw.com'
   - '+.hbpukang.com'
   - '+.hbqnb.com'
-  - '+.hbqnxy.com'
   - '+.hbqtgg.com'
   - '+.hbqyj.org'
   - '+.hbqyxy.com'
@@ -26830,6 +26831,7 @@ payload:
   - '+.hp123.com'
   - '+.hp888.com'
   - '+.hpccake.com'
+  - '+.hpcwwd.com'
   - '+.hpoi.net'
   - '+.hpool.online'
   - '+.hprt.com'
@@ -29556,7 +29558,6 @@ payload:
   - '+.ipfen.com'
   - '+.ipfsbit.com'
   - '+.ipgoal.com'
-  - '+.iph123.com'
   - '+.iphonediule.com'
   - '+.ipin.com'
   - '+.ipinba.com'
@@ -30298,7 +30299,6 @@ payload:
   - '+.jcbjbcak.com'
   - '+.jccsoc.com'
   - '+.jccug.com'
-  - '+.jcdf99.com'
   - '+.jcedu.org'
   - '+.jcelyj.com'
   - '+.jcf94.com'
@@ -31832,6 +31832,7 @@ payload:
   - '+.jpkix.com'
   - '+.jpmsg.com'
   - '+.jpnettech.com'
+  - '+.jpsdk.com'
   - '+.jpshuntong.com'
   - '+.jpsmile.com'
   - '+.jptaiyo.com'
@@ -32622,7 +32623,6 @@ payload:
   - '+.kai-asia-hk.com'
   - '+.kai-ying.com'
   - '+.kaiba315.com'
-  - '+.kaiboda.org'
   - '+.kaiboer.com'
   - '+.kaichengschool.com'
   - '+.kaidanbao.com'
@@ -34059,6 +34059,7 @@ payload:
   - '+.l99.com'
   - '+.l9p9b.xyz'
   - '+.la-mo.com'
+  - '+.laakan.com'
   - '+.lab-z.com'
   - '+.labagd.com'
   - '+.labbang.com'
@@ -34535,6 +34536,7 @@ payload:
   - '+.leadge.com'
   - '+.leadong.com'
   - '+.leadstong.com'
+  - '+.leaferjs.com'
   - '+.leaforbook.com'
   - '+.leafword.com'
   - '+.leagcard.com'
@@ -34757,6 +34759,7 @@ payload:
   - '+.lepaiok.com'
   - '+.lepaowang.com'
   - '+.lepiaoyun.com'
+  - '+.leptv.com'
   - '+.leqian.com'
   - '+.lequ.com'
   - '+.lequ7.com'
@@ -35737,6 +35740,7 @@ payload:
   - '+.lmwgame.com'
   - '+.lmwlhh.com'
   - '+.lmwljz.com'
+  - '+.lmx7.com'
   - '+.lmxxxz.com'
   - '+.ln76yf.cfd'
   - '+.lnamphp.com'
@@ -35935,6 +35939,7 @@ payload:
   - '+.longwin.org'
   - '+.longwisepr.com'
   - '+.longxi-tech.net'
+  - '+.longxialjkashdiuhozhjksadlkfj.com'
   - '+.longxianwen.net'
   - '+.longxuan.ren'
   - '+.longygo.com'
@@ -36100,7 +36105,6 @@ payload:
   - '+.lr-link.com'
   - '+.lrc99.com'
   - '+.lrcb.net'
-  - '+.lrcgc.com'
   - '+.lrcku.com'
   - '+.lrdzt.com'
   - '+.lrhold.net'
@@ -36215,6 +36219,7 @@ payload:
   - '+.luckincoffeecdn.com'
   - '+.lucklnk.com'
   - '+.lucky286.com'
+  - '+.lucky8k.com'
   - '+.luckyair.net'
   - '+.luckycoffee.com'
   - '+.luckyxp.net'
@@ -36369,7 +36374,6 @@ payload:
   - '+.lvban365.com'
   - '+.lvbeijingtour.com'
   - '+.lvbenma.com'
-  - '+.lvbuo.com'
   - '+.lvchanghuanbao.com'
   - '+.lvchayun.com'
   - '+.lvchazhiboapp.com'
@@ -37378,7 +37382,6 @@ payload:
   - '+.meijiezaixian.net'
   - '+.meijingjie.com'
   - '+.meijiu.com'
-  - '+.meijucenter.com'
   - '+.meijufans.com'
   - '+.meijukan.com'
   - '+.meijuniao.net'
@@ -37644,6 +37647,7 @@ payload:
   - '+.mgkj.vip'
   - '+.mgl9.com'
   - '+.mglip.com'
+  - '+.mgmqq.net'
   - '+.mgogo.com'
   - '+.mgplay.com.tw'
   - '+.mgpyh.com'
@@ -38959,7 +38963,6 @@ payload:
   - '+.mychery.com'
   - '+.mychery.net'
   - '+.mychinaevent.com'
-  - '+.mychlteam.com'
   - '+.mychunyan.net'
   - '+.mycleanmymac.com'
   - '+.myclub2.com'
@@ -39971,6 +39974,7 @@ payload:
   - '+.nlypx.com'
   - '+.nlzpy.com'
   - '+.nm8yx.com'
+  - '+.nmboat.com'
   - '+.nmbxd1.com'
   - '+.nmcjdo04.xyz'
   - '+.nmet168.com'
@@ -40316,12 +40320,12 @@ payload:
   - '+.nxgjbyy.com'
   - '+.nxgqt.org'
   - '+.nxgtjt.com'
-  - '+.nxhscxkj.com'
   - '+.nxin.com'
   - '+.nxit.us'
   - '+.nxly766.com'
   - '+.nxnet.net'
   - '+.nxnews.net'
+  - '+.nxnjw.com'
   - '+.nxnresearch.com'
   - '+.nxol.net'
   - '+.nxrrvmy.com'
@@ -40629,6 +40633,7 @@ payload:
   - '+.omni-pharma.com'
   - '+.omnibeautylux.com'
   - '+.omobi.cc'
+  - '+.omofundm.com'
   - '+.omooo.net'
   - '+.omos88.com'
   - '+.omowork.com'
@@ -40760,6 +40765,7 @@ payload:
   - '+.open-falcon.org'
   - '+.open-open.com'
   - '+.open189.net'
+  - '+.openaizh.com'
   - '+.openanolis.org'
   - '+.openasic.org'
   - '+.openbayes.com'
@@ -40913,7 +40919,6 @@ payload:
   - '+.osk-clean.com'
   - '+.oskwai.com'
   - '+.osmsg.com'
-  - '+.osmy.net'
   - '+.osnt.wang'
   - '+.oso6.com'
   - '+.ososn.com'
@@ -40953,6 +40958,7 @@ payload:
   - '+.oudapay.com'
   - '+.oudeqi.com'
   - '+.oudiscover.com'
+  - '+.oueia.xyz'
   - '+.oufa-travel.com'
   - '+.oufengblog.com'
   - '+.oufusoft.com'
@@ -41460,6 +41466,7 @@ payload:
   - '+.pddjw.com'
   - '+.pddpic.com'
   - '+.pddugc.com'
+  - '+.pddzj.com'
   - '+.pdf.la'
   - '+.pdf00.com'
   - '+.pdf100.net'
@@ -41550,7 +41557,6 @@ payload:
   - '+.pengpeng.la'
   - '+.pengqi.club'
   - '+.pengqian.win'
-  - '+.pengrenfang.com'
   - '+.pengrl.com'
   - '+.pengshengcaishui.com'
   - '+.pengyaou.com'
@@ -41824,6 +41830,7 @@ payload:
   - '+.pinganyun.com'
   - '+.pinganzhengyang.com'
   - '+.pingcap.com'
+  - '+.pingcode.tech'
   - '+.pingcoo.com'
   - '+.pingfangx.com'
   - '+.pingfenbang.com'
@@ -42022,6 +42029,7 @@ payload:
   - '+.plsadx.com'
   - '+.pluosi.com'
   - '+.plures.net'
+  - '+.plus.dji.com'
   - '+.plusgantt.com'
   - '+.plusplustu.com'
   - '+.plutuspay.com'
@@ -42371,6 +42379,7 @@ payload:
   - '+.ps314.com'
   - '+.psbc.com'
   - '+.psc4d.com'
+  - '+.pscddos.com'
   - '+.psd.net'
   - '+.psd8.com'
   - '+.psdiv.com'
@@ -42577,7 +42586,6 @@ payload:
   - '+.pznsh.com'
   - '+.pzoom.com'
   - '+.pzpu.com'
-  - '+.pztuan.com'
   - '+.q-dazzle.com'
   - '+.q-supreme.com'
   - '+.q0760.com'
@@ -42967,6 +42975,7 @@ payload:
   - '+.qianyu56.com'
   - '+.qianyuangx.com'
   - '+.qianyue999.com'
+  - '+.qianyuewenhua.xyz'
   - '+.qianyunyingyong.com'
   - '+.qianyuwang.com'
   - '+.qianzhan.com'
@@ -43159,6 +43168,7 @@ payload:
   - '+.qincj.me'
   - '+.qinco.net'
   - '+.qineasy.com'
+  - '+.qiner520.com'
   - '+.qinfan.xyz'
   - '+.qing-shan.com'
   - '+.qing.su'
@@ -44724,6 +44734,7 @@ payload:
   - '+.rnbqvet.com'
   - '+.rnfengwo.com'
   - '+.rngtest.com'
+  - '+.rnhqxh.com'
   - '+.ro4.cc'
   - '+.road-group.com'
   - '+.roadjava.com'
@@ -45089,6 +45100,7 @@ payload:
   - '+.ruzw.com'
   - '+.rv28.com'
   - '+.rv2go.com'
+  - '+.rvcore.com'
   - '+.rvfdp.com'
   - '+.rvmcu.com'
   - '+.rwtext.com'
@@ -46347,7 +46359,6 @@ payload:
   - '+.shejipi.com'
   - '+.shejiqun.com'
   - '+.shejis.com'
-  - '+.shejitang.com'
   - '+.shejiwo.net'
   - '+.shejiye.com'
   - '+.sheketiandi.com'
@@ -47677,6 +47688,7 @@ payload:
   - '+.sm688801.com'
   - '+.sm688839.com'
   - '+.sm96596.com'
+  - '+.smabye.com'
   - '+.smalljun.com'
   - '+.smallk.net'
   - '+.smallpdfer.com'
@@ -47742,7 +47754,6 @@ payload:
   - '+.smebb.com'
   - '+.smemo.info'
   - '+.smeoa.com'
-  - '+.smesun.com'
   - '+.smfsgs.com'
   - '+.smfyun.com'
   - '+.smggw.com'
@@ -48007,6 +48018,7 @@ payload:
   - '+.songker.com'
   - '+.songlei.net'
   - '+.songliguo.com'
+  - '+.songma.com'
   - '+.songqili.net'
   - '+.songqinedu.com'
   - '+.songqinnet.com'
@@ -48205,6 +48217,7 @@ payload:
   - '+.sp910.com'
   - '+.space1688.com'
   - '+.spacechina.com'
+  - '+.spacemit.com'
   - '+.spacesystech.com'
   - '+.spanishknow.com'
   - '+.spark-app.store'
@@ -48430,6 +48443,7 @@ payload:
   - '+.stage1st.com'
   - '+.stage3rd.com'
   - '+.stajy.com'
+  - '+.stakssyl.com'
   - '+.standardshop.net'
   - '+.star1024.com'
   - '+.star365.com'
@@ -48850,6 +48864,7 @@ payload:
   - '+.suofeiyashop.com'
   - '+.suoge.net'
   - '+.suokao.com'
+  - '+.suoluomei.com'
   - '+.suosihulian.com'
   - '+.suoxin5.com'
   - '+.suoyiren.com'
@@ -49142,6 +49157,7 @@ payload:
   - '+.syfly007.com'
   - '+.syfw.com'
   - '+.syg315.com'
+  - '+.sygcjs.com'
   - '+.sygd.com'
   - '+.syhccs.com'
   - '+.syhhidc.com'
@@ -50349,6 +50365,7 @@ payload:
   - '+.thseoer.com'
   - '+.thstars.com'
   - '+.thtfpc.com'
+  - '+.thufeng.net'
   - '+.thumedialab.com'
   - '+.thundercdn.net'
   - '+.thundercloud.group'
@@ -50612,6 +50629,7 @@ payload:
   - '+.timeread.net'
   - '+.timesboom.com'
   - '+.timesdf-hn.com'
+  - '+.timeticktick.com'
   - '+.timetw.com'
   - '+.timev.com'
   - '+.timing360.com'
@@ -50734,6 +50752,7 @@ payload:
   - '+.tjmhc.com'
   - '+.tjmuch.com'
   - '+.tjmysdq.com'
+  - '+.tjnbuz.com'
   - '+.tjorthop.org'
   - '+.tjpa-china.org'
   - '+.tjpma.org'
@@ -52177,7 +52196,6 @@ payload:
   - '+.ugbb.com'
   - '+.ugcar.com'
   - '+.ugdtimg.com'
-  - '+.uggas.com'
   - '+.uggd.com'
   - '+.ugirls.tv'
   - '+.ugmars.com'
@@ -52301,6 +52319,7 @@ payload:
   - '+.umlonline.org'
   - '+.umowang.com'
   - '+.umpay.com'
+  - '+.umqlyy.com'
   - '+.ums86.com'
   - '+.umsamd.com'
   - '+.umsns.com'
@@ -52391,6 +52410,7 @@ payload:
   - '+.unjmz.com'
   - '+.unjs.com'
   - '+.unlimax.com'
+  - '+.unlimithealth.com'
   - '+.unnnnn.com'
   - '+.unogenius.com'
   - '+.unpcn.com'
@@ -52672,7 +52692,6 @@ payload:
   - '+.uxingroup.com'
   - '+.uxiting.com'
   - '+.uxpi.net'
-  - '+.uxxsn.com'
   - '+.uya100.com'
   - '+.uyan.cc'
   - '+.uyanip.com'
@@ -52786,7 +52805,6 @@ payload:
   - '+.vanterc.com'
   - '+.vants.org'
   - '+.vanzol.com'
-  - '+.vapee.com'
   - '+.vapejoin.com'
   - '+.vapps.me'
   - '+.vaptcha.com'
@@ -53313,6 +53331,7 @@ payload:
   - '+.vsyo.com'
   - '+.vtache.com'
   - '+.vtbs.fun'
+  - '+.vtcdn000.com'
   - '+.vteamgroup.com'
   - '+.vtears.com'
   - '+.vtepai.com'
@@ -53327,6 +53346,7 @@ payload:
   - '+.vuejscaff.com'
   - '+.vuepr.icu'
   - '+.vuevideo.net'
+  - '+.vuhbgtsi.xyz'
   - '+.vulbox.com'
   - '+.vulcan.dl.playstation.net'
   - '+.vulnhunt.com'
@@ -54897,6 +54917,7 @@ payload:
   - '+.wiloop.net'
   - '+.wimetro.com'
   - '+.wimiar.com'
+  - '+.win-haoxiang-win.com'
   - '+.win-ke.com'
   - '+.win-man.com'
   - '+.win.hn'
@@ -55113,6 +55134,7 @@ payload:
   - '+.wkshipark.com'
   - '+.wkyaoye.com'
   - '+.wkzf.com'
+  - '+.wkzk.com'
   - '+.wkzuche.com'
   - '+.wl.dlservice.microsoft.com'
   - '+.wl369.com'
@@ -55759,6 +55781,7 @@ payload:
   - '+.wuliujia2018.com'
   - '+.wulong365.com'
   - '+.wulvxing.com'
+  - '+.wuma888.com'
   - '+.wumart.com'
   - '+.wumeishebei.com'
   - '+.wumii.com'
@@ -55889,7 +55912,6 @@ payload:
   - '+.www.htcsense.com'
   - '+.www.microsoft.com'
   - '+.www.nike.com'
-  - '+.www.pandora.net'
   - '+.www.redhat.com'
   - '+.www.samsung.com'
   - '+.www.st.com'
@@ -56235,6 +56257,7 @@ payload:
   - '+.xbiquge.com'
   - '+.xbiquge.la'
   - '+.xbiquge.so'
+  - '+.xbiquge.tw'
   - '+.xbiquge6.com'
   - '+.xbiqugew.com'
   - '+.xbiqukan.com'
@@ -57735,6 +57758,7 @@ payload:
   - '+.xlys1904.com'
   - '+.xlysauc.com'
   - '+.xlysoft.net'
+  - '+.xlyzjs.com'
   - '+.xlzfpt.com'
   - '+.xlzhao.com'
   - '+.xlzx.com'
@@ -57824,7 +57848,6 @@ payload:
   - '+.xmspace.net'
   - '+.xmtbang.com'
   - '+.xmtyy.net'
-  - '+.xmuchong.com'
   - '+.xmuli.tech'
   - '+.xmwan.com'
   - '+.xmwsrc.com'
@@ -58234,6 +58257,7 @@ payload:
   - '+.xuka.com'
   - '+.xulaoshi68.com'
   - '+.xuliangwei.com'
+  - '+.xuliehao.info'
   - '+.xulihang.me'
   - '+.xulizui6.com'
   - '+.xulv.net'
@@ -58750,7 +58774,6 @@ payload:
   - '+.yankay.com'
   - '+.yanliu.org'
   - '+.yanlutong.com'
-  - '+.yanmbjiage.com'
   - '+.yannaisi.com'
   - '+.yannv.com'
   - '+.yanoda.com'
@@ -59688,7 +59711,6 @@ payload:
   - '+.yiticm.com'
   - '+.yitongjiayou.com'
   - '+.yitongmedia.com'
-  - '+.yitopapp.com'
   - '+.yituliu.site'
   - '+.yitutech.com'
   - '+.yituyu.com'
@@ -60213,6 +60235,7 @@ payload:
   - '+.youjiaus.net'
   - '+.youjiaxiao.com'
   - '+.youjidi.net'
+  - '+.youjimilk.com'
   - '+.youjingnetwork.com'
   - '+.youjiuhealth.com'
   - '+.youjoy.tv'
@@ -60252,6 +60275,7 @@ payload:
   - '+.youme.im'
   - '+.youmenr.com'
   - '+.youmew.com'
+  - '+.youmhdxb.com'
   - '+.youmi.net'
   - '+.youmiad.com'
   - '+.youminonline.com'
@@ -60648,6 +60672,7 @@ payload:
   - '+.ytsanchuan.com'
   - '+.ytszg.com'
   - '+.ytsznyy.com'
+  - '+.yttwewx.com'
   - '+.ytud.net'
   - '+.ytusmart.com'
   - '+.ytxedu.com'
@@ -61418,6 +61443,7 @@ payload:
   - '+.yyyy.games'
   - '+.yyyyy.run'
   - '+.yyzai.com'
+  - '+.yyziyuan1.com'
   - '+.yyzsoft.com'
   - '+.yyzw.com'
   - '+.yyzyytj.com'
@@ -62460,7 +62486,6 @@ payload:
   - '+.zhinet.com'
   - '+.zhinikefu.com'
   - '+.zhiniu8.com'
-  - '+.zhinu.net'
   - '+.zhipan.net'
   - '+.zhipeix.com'
   - '+.zhipianbang.com'
@@ -63167,6 +63192,7 @@ payload:
   - '+.zjfdc.net'
   - '+.zjft.com'
   - '+.zjgas.net'
+  - '+.zjgf88.com'
   - '+.zjgjj.com'
   - '+.zjgqt.org'
   - '+.zjgrrb.com'
