--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2278,7 +2278,6 @@ payload:
   - '+.29293.com'
   - '+.2929gou.com'
   - '+.293.net'
-  - '+.2952.cc'
   - '+.29592.net'
   - '+.2961h.com'
   - '+.29663.com'
@@ -2471,7 +2470,6 @@ payload:
   - '+.31meijia.com'
   - '+.31ml.com'
   - '+.31mold.com'
-  - '+.31myhome.com'
   - '+.31pump.com'
   - '+.31rent.com'
   - '+.31seal.com'
@@ -4580,7 +4578,6 @@ payload:
   - '+.5858.com'
   - '+.58611.net'
   - '+.5866.com'
-  - '+.5873118.com'
   - '+.587343.com'
   - '+.587tuchuang.com'
   - '+.587tz079.cc'
@@ -4648,7 +4645,6 @@ payload:
   - '+.59168.net'
   - '+.59178.com'
   - '+.5918dyw.com'
-  - '+.5918s.com'
   - '+.591918.com'
   - '+.591change.com'
   - '+.591cto.com'
@@ -5738,7 +5734,6 @@ payload:
   - '+.80paper.com'
   - '+.80s.im'
   - '+.80s.tw'
-  - '+.80sec.com'
   - '+.80shihua.com'
   - '+.80sjy.net'
   - '+.80test.com'
@@ -9214,6 +9209,7 @@ payload:
   - '+.ayidada.com'
   - '+.ayijx.com'
   - '+.ayilaile.com'
+  - '+.ayizu.com'
   - '+.ayjs.net'
   - '+.ayqy.net'
   - '+.ayrbs.com'
@@ -10010,6 +10006,7 @@ payload:
   - '+.bdydns.net'
   - '+.bdys.me'
   - '+.bdysite.com'
+  - '+.bdyz.xyz'
   - '+.be-xx.com'
   - '+.be90.com'
   - '+.beadwallet.com'
@@ -10335,6 +10332,7 @@ payload:
   - '+.bhfangchan.com'
   - '+.bhgmarketplace.com'
   - '+.bhhgallery.com'
+  - '+.bhidi.com'
   - '+.bhjck.com'
   - '+.bhk.mobi'
   - '+.bhnsh.com'
@@ -10964,6 +10962,7 @@ payload:
   - '+.bjwfz.com'
   - '+.bjwhds.com'
   - '+.bjwkzl.com'
+  - '+.bjwsxx.com'
   - '+.bjwszyxy.com'
   - '+.bjwwhc.com'
   - '+.bjwyseo.com'
@@ -13064,7 +13063,6 @@ payload:
   - '+.chaimage.com'
   - '+.chain-store.net'
   - '+.chaincar.com'
-  - '+.chainflag.com'
   - '+.chainknow.com'
   - '+.chainnode.com'
   - '+.chainsdir.com'
@@ -13432,7 +13430,6 @@ payload:
   - '+.cheyishang.com'
   - '+.cheyisou.com'
   - '+.cheynewalk.com'
-  - '+.cheyo.net'
   - '+.cheyoo.com'
   - '+.cheyou123.com'
   - '+.cheyun.com'
@@ -17046,6 +17043,7 @@ payload:
   - '+.danmaku.tv'
   - '+.danmakupie.com'
   - '+.danmei.la'
+  - '+.danmei.org'
   - '+.danmi.com'
   - '+.danming-ic.com'
   - '+.danmo.com'
@@ -17055,7 +17053,6 @@ payload:
   - '+.danpin.com'
   - '+.danqi.com'
   - '+.danqingshaonian.com'
-  - '+.danrenzheng.com'
   - '+.danteng.me'
   - '+.dantengge.org'
   - '+.dantuvc.com'
@@ -17518,6 +17515,7 @@ payload:
   - '+.dehsm.com'
   - '+.dehua.net'
   - '+.dehuaca.com'
+  - '+.dehuasd.com'
   - '+.deifei.com'
   - '+.deifgs.com'
   - '+.deikuo.com'
@@ -17780,6 +17778,7 @@ payload:
   - '+.dhb168.com'
   - '+.dhboy.com'
   - '+.dhcc.wang'
+  - '+.dheear.site'
   - '+.dhfeng.com'
   - '+.dhhqfw.com'
   - '+.dhifi.com'
@@ -19270,6 +19269,8 @@ payload:
   - '+.dyly.com'
   - '+.dyonr.com'
   - '+.dyp009.com'
+  - '+.dyp011.com'
+  - '+.dyp012.com'
   - '+.dyqc.com'
   - '+.dyrbw.com'
   - '+.dyrcb.net'
@@ -20295,6 +20296,7 @@ payload:
   - '+.epzcw.com'
   - '+.eqbyc.com'
   - '+.eqding.com'
+  - '+.eqghuu.com'
   - '+.eqh5.com'
   - '+.eqidi.com'
   - '+.eqie.com'
@@ -25054,7 +25056,6 @@ payload:
   - '+.haogoshop.com'
   - '+.haogow.com'
   - '+.haogu114.com'
-  - '+.haogumei.net'
   - '+.haohaizi.com'
   - '+.haohan-data.com'
   - '+.haohanfw.com'
@@ -26395,6 +26396,7 @@ payload:
   - '+.hmecw.com'
   - '+.hmgj.com'
   - '+.hmgreat.com'
+  - '+.hmh5.com'
   - '+.hminvestment.com'
   - '+.hmjblog.com'
   - '+.hmlan.com'
@@ -27339,7 +27341,6 @@ payload:
   - '+.huaweidevice.com'
   - '+.huaweidun.com'
   - '+.huaweielec.com'
-  - '+.huaweiempresas.com'
   - '+.huaweimall.com'
   - '+.huaweimarine.com'
   - '+.huaweimossel.com'
@@ -28309,6 +28310,7 @@ payload:
   - '+.ibiquges.com'
   - '+.ibiquke.com'
   - '+.ibiquku.la'
+  - '+.ibiquxs.net'
   - '+.ibireme.com'
   - '+.ibixiaxs.com'
   - '+.ibjq.wang'
@@ -31249,6 +31251,7 @@ payload:
   - '+.jinshujucdn.com'
   - '+.jinshujufiles.com'
   - '+.jinshun.com'
+  - '+.jinshutuan.com'
   - '+.jinsiwei.com'
   - '+.jintaimall.com'
   - '+.jintang114.org'
@@ -33056,6 +33059,7 @@ payload:
   - '+.kernelnote.com'
   - '+.kerneltravel.net'
   - '+.keruibell.com'
+  - '+.keruna.com'
   - '+.kerust.com'
   - '+.keruyun.com'
   - '+.keruyun.net'
@@ -33223,6 +33227,7 @@ payload:
   - '+.kingwisoft.com'
   - '+.kingyon.com'
   - '+.kinhom.com'
+  - '+.kinlong.com'
   - '+.kinpan.com'
   - '+.kinqee.com'
   - '+.kintiger.com'
@@ -34310,6 +34315,7 @@ payload:
   - '+.lanzoug.com'
   - '+.lanzoui.com'
   - '+.lanzouj.com'
+  - '+.lanzouk.com'
   - '+.lanzoul.com'
   - '+.lanzoum.com'
   - '+.lanzoup.com'
@@ -39149,7 +39155,6 @@ payload:
   - '+.mysteel.net'
   - '+.mysteelcdn.com'
   - '+.mysteelcms.com'
-  - '+.mystudyerte.com'
   - '+.mysubmail.com'
   - '+.mysupa.com'
   - '+.mysuperbest.com'
@@ -41472,6 +41477,7 @@ payload:
   - '+.pcwl.com'
   - '+.pcwolke.com'
   - '+.pcyangguangban.com'
+  - '+.pd-italent.com'
   - '+.pd-sts.com'
   - '+.pd120.com'
   - '+.pd17.com'
@@ -41754,6 +41760,7 @@ payload:
   - '+.piaochong.com'
   - '+.piaodaren.com'
   - '+.piaode.ren'
+  - '+.piaodian.net'
   - '+.piaodown.com'
   - '+.piaohua.com'
   - '+.piaojubao.com'
@@ -41976,6 +41983,7 @@ payload:
   - '+.pkbkok.com'
   - '+.pkdyplayer.com'
   - '+.pkfj.xyz'
+  - '+.pkfsxh.com'
   - '+.pkm360.com'
   - '+.pkmmo.com'
   - '+.pko123.com'
@@ -43912,6 +43920,7 @@ payload:
   - '+.queniuso.com'
   - '+.queniusy.com'
   - '+.queniusz.com'
+  - '+.queniutc.com'
   - '+.queniuuf.com'
   - '+.queniuum.com'
   - '+.queniuwx.com'
@@ -44329,7 +44338,6 @@ payload:
   - '+.rcdn.fun'
   - '+.rcfans.com'
   - '+.rcgus.com'
-  - '+.rchhps.com'
   - '+.rchudong.com'
   - '+.rclbbs.com'
   - '+.rcpx.cc'
@@ -47031,7 +47039,6 @@ payload:
   - '+.shuimuyulin.com'
   - '+.shuini.biz'
   - '+.shuipingzuo.com'
-  - '+.shuiqian.cc'
   - '+.shuiwushi.net'
   - '+.shuiyinbao.com'
   - '+.shuiyinyu.com'
@@ -47445,7 +47452,6 @@ payload:
   - '+.sipeed.com'
   - '+.sipgl-lcl.com'
   - '+.siphrd.com'
-  - '+.sipo-gd.com'
   - '+.sipo-hb.com'
   - '+.sipo-sc.com'
   - '+.siposchina.com'
@@ -50483,6 +50489,7 @@ payload:
   - '+.tianqiaojuyuan.com'
   - '+.tianqiaoyishuzhongxin.org'
   - '+.tianqiapi.com'
+  - '+.tianqicloud.com'
   - '+.tianqihoubao.com'
   - '+.tianqijun.com'
   - '+.tianqikb.com'
@@ -52359,7 +52366,6 @@ payload:
   - '+.un10086.com'
   - '+.un1c0de.xyz'
   - '+.una-ad.com'
-  - '+.unages.com'
   - '+.unasdwarfs.com'
   - '+.uncbd.com'
   - '+.unccr.com'
@@ -54840,7 +54846,6 @@ payload:
   - '+.whu.pt'
   - '+.whualong.com'
   - '+.whudfr.com'
-  - '+.whuh-gi.com'
   - '+.whuh.com'
   - '+.whuhzzs.com'
   - '+.whuspark.com'
@@ -57139,7 +57144,6 @@ payload:
   - '+.xieyinwang.com'
   - '+.xiezefan.me'
   - '+.xiezewen.com'
-  - '+.xiezhenxian.net'
   - '+.xieziqiu.net'
   - '+.xiezixiansheng.com'
   - '+.xiezuo100.com'
@@ -58424,7 +58428,6 @@ payload:
   - '+.xx4a.com'
   - '+.xx5.com'
   - '+.xx667788xx.com'
-  - '+.xx7519.com'
   - '+.xxadc.com'
   - '+.xxbiquge.com'
   - '+.xxbmm.com'
@@ -59647,7 +59650,6 @@ payload:
   - '+.yioulai.com'
   - '+.yiovo.com'
   - '+.yipaipian.com'
-  - '+.yipanhaocai.com'
   - '+.yipaogan.com'
   - '+.yiparts.com'
   - '+.yipemail.com'
@@ -60768,7 +60770,6 @@ payload:
   - '+.yuanshen.com'
   - '+.yuanshichang.com'
   - '+.yuansouti.com'
-  - '+.yuantengfei.net'
   - '+.yuantengfei.org'
   - '+.yuantiku.com'
   - '+.yuantoushuo.com'
@@ -61115,6 +61116,7 @@ payload:
   - '+.yunruift.com'
   - '+.yunruikj.com'
   - '+.yuns1.net'
+  - '+.yunscache.cc'
   - '+.yunsd.net'
   - '+.yunser.com'
   - '+.yunshan.net'
@@ -61689,7 +61691,6 @@ payload:
   - '+.zbmeishu.com'
   - '+.zbmx666.com'
   - '+.zbnews.net'
-  - '+.zbnxs.com'
   - '+.zbopr.net'
   - '+.zbqlm.com'
   - '+.zbrushcn.com'
@@ -62281,7 +62282,6 @@ payload:
   - '+.zhdgps.com'
   - '+.zhe.com'
   - '+.zhe2.com'
-  - '+.zhe4000.com'
   - '+.zhe800.com'
   - '+.zhebei.com'
   - '+.zheerhui.com'
